--- a/help/src/hid00006.htm
+++ b/help/src/hid00006.htm
@@ -75,10 +75,8 @@
   <p>
     <a href="hid00005.htm#TextViewer">TextViewer</a>_XW コマンドを実行すると、テキストビューアを別ウィンドウで開きます。<br>
     これはモーダルウィンドウではないので、表示したままメイン画面での操作が可能です。また複数のウィンドウを開くこともできます。<br>
-    ビューアからは<span class="btn_frame">TAB</span>キーでファイラーにフォーカスが戻ります。ファイラーからは <a
-      href="hid00005.htm#ToExViewer">ToExViewer</a>
-    コマンドで、開いているビューアに移れます(複数ある場合はポップアップメニューで選択)。また、内部と別ウィンドウの両方でテキストビューアを開いている場合、<span
-      class="btn_frame">TAB</span>キーで両者の間を行き来できます。<br>
+    ビューアからは<span class="btn_frame">TAB</span>キーでファイラーにフォーカスが戻ります。ファイラーからは <a href="hid00005.htm#ToExViewer">ToExViewer</a>
+    コマンドで、開いているビューアに移れます(複数ある場合はポップアップメニューで選択)。また、内部と別ウィンドウの両方でテキストビューアを開いている場合、<span class="btn_frame">TAB</span>キーで両者の間を行き来できます。<br>
     <br>
     別ウィンドウのテキストビューアでは以下のような制限や違いがあります。
   </p>
@@ -87,13 +85,8 @@
     <li>ウィンドウは、常にメイン画面の前面になります。</li>
     <li>メニューバーやツールバーはありません(右クリックメニューは利用可能)。</li>
     <li>折り返しはウィンドウの幅に固定され、左側余白は 0 になります。</li>
-    <li><a href="#BitmapView">BitmapView</a>、<a href="#CharInfo">CharInfo</a>、<a href="#CsvRecord">CsvRecord</a>、<a
-        href="#Delete">Delete</a>、<a href="#FunctionList">FunctionList</a>、<a href="#Inspector">Inspector</a>、<a
-        href="#ImgPreview">ImgPreview</a>、<a href="#ListFileInfo">ListFileInfo</a>、<a href="#MarkList">MarkList</a>、<a
-        href="#SelectFile">SelectFile</a>、<a href="#SetMargin">SetMargin</a>、<a href="#SetTopAddr">SetTopAddr</a>、<a
-        href="#SetWidth">SetWidth</a>、<a href="#ShowFileInfo">ShowFileInfo</a>、<a href="#UserDefList">UserDefList</a>
-      コマンドや、<a href="#ExeCommands">ExeCommands</a>、<a href="#Grep">Grep</a>、<a
-        href="#InputCommands">InputCommands</a>、<a href="#KeyList">KeyList</a> コマンドなどは使えません。実行しようとすると警告が出ます。</li>
+    <li><a href="#BitmapView">BitmapView</a>、<a href="#CharInfo">CharInfo</a>、<a href="#CsvRecord">CsvRecord</a>、<a href="#Delete">Delete</a>、<a href="#FunctionList">FunctionList</a>、<a href="#Inspector">Inspector</a>、<a href="#ImgPreview">ImgPreview</a>、<a href="#ListFileInfo">ListFileInfo</a>、<a href="#MarkList">MarkList</a>、<a href="#SelectFile">SelectFile</a>、<a href="#SetMargin">SetMargin</a>、<a href="#SetTopAddr">SetTopAddr</a>、<a href="#SetWidth">SetWidth</a>、<a href="#ShowFileInfo">ShowFileInfo</a>、<a href="#UserDefList">UserDefList</a>
+      コマンドや、<a href="#ExeCommands">ExeCommands</a>、<a href="#Grep">Grep</a>、<a href="#InputCommands">InputCommands</a>、<a href="#KeyList">KeyList</a> コマンドなどは使えません。実行しようとすると警告が出ます。</li>
     <li>対応している<a href="hid00021.htm">イベント</a>は、「<b>テキストビューアを開く直前</b>」のみです。</li>
     <li><a href="#NextFile">NextFile</a>/<a href="#PrevFile">PrevFile</a> コマンドは、複数開いている場合のウィンドウ切り替えとして機能します。</li>
     <li>表示ファイルが切り替わっても、ファイルリストのカーソル位置は同期しません。</li>
@@ -111,11 +104,7 @@
 
   <p class="link_box">
     <a href="#AlphaBlend">A</a> <a href="#BackViewHist">B</a> <a href="#Calculator">C</a> <a href="#DebugCmdFile">D</a>
-    <a href="#EditHighlight">E</a> <a href="#FileEdit">F</a> <a href="#Grep">G</a> <a href="#HelpContents">H</a> <a
-      href="#ImgPreview">I</a> <a href="#JumpLine">J</a> <a href="#KeyList">K</a> <a href="#LineEnd">L</a> <a
-      href="#Mark">M</a> <a href="#NextErr">N</a> <a href="#OpenURL">O</a> <a href="#PageDown">P</a> <a
-      href="#RegExChecker">R</a> <a href="#SaveDump">S</a> <a href="#TagJump">T</a> <a href="#UserDefList">U</a> <a
-      href="#ViewHistory">V</a> <a href="#WebMap">W</a> <a href="#ZoomIn">Z</a>　　　　<a href="hid00100.htm#TV">→
+    <a href="#EditHighlight">E</a> <a href="#FileEdit">F</a> <a href="#Grep">G</a> <a href="#HelpContents">H</a> <a href="#ImgPreview">I</a> <a href="#JumpLine">J</a> <a href="#KeyList">K</a> <a href="#LineEnd">L</a> <a href="#Mark">M</a> <a href="#NextErr">N</a> <a href="#OpenURL">O</a> <a href="#PageDown">P</a> <a href="#RegExChecker">R</a> <a href="#SaveDump">S</a> <a href="#TagJump">T</a> <a href="#UserDefList">U</a> <a href="#ViewHistory">V</a> <a href="#WebMap">W</a> <a href="#ZoomIn">Z</a>　　　　<a href="hid00100.htm#TV">→
       コマンド索引</a> ／ <a href="hid00101.htm#TV">→ 機能別索引</a>
   </p>
 
@@ -209,8 +198,7 @@
     <dt id="Close">Close<span class="pram_text">[_AL]</span></dt>
     <dd>テキストビューアを閉じます。<br>
       <span class="btn_frame">ENTER</span>キーを押すか、画面のテキスト外部分をダブルクリックしても閉じることができます。<br>
-      また<span
-        class="btn_frame">ESC</span>キーを押すと、<b>文字情報</b>、<b>CSV/TSVレコード</b>、<b>ビットマップビュー</b>、<b>インスペクタ</b>、<b>イメージプレビュー</b>
+      また<span class="btn_frame">ESC</span>キーを押すと、<b>文字情報</b>、<b>CSV/TSVレコード</b>、<b>ビットマップビュー</b>、<b>インスペクタ</b>、<b>イメージプレビュー</b>
       が表示されていたらそれを閉じ、なにも表示されていなかったらビューアを閉じます。<br>
       パラメータに <b>AL</b> を指定すると、別ウィンドウで開いているすべてのテキストビューアを閉じます。
     </dd>
@@ -265,8 +253,7 @@
       パラメータに <b>ON</b> を指定すると表示、<b>OFF</b> では非表示になります。<br>
       ファイルの先頭行に TAB が含まれていたら <b>TSV</b>、そうでない場合は <b>CSV</b> とみなし、カーソル行を一つのレコードとして内容を一覧表示します。<br>
       <div class="spc_box">
-        「<b>先頭行が項目名</b>」をチェックしていると、ファイルの一行目を項目名とみなしてそれを表示します(テキストビューアの右クリックメニューと連動)。この設定は、CSV/TSVファイルの代替データストリームに <a
-          href="hid00102.htm#NyanfiDef">nyanfi.def</a> という名前で保存されます。<br>
+        「<b>先頭行が項目名</b>」をチェックしていると、ファイルの一行目を項目名とみなしてそれを表示します(テキストビューアの右クリックメニューと連動)。この設定は、CSV/TSVファイルの代替データストリームに <a href="hid00102.htm#NyanfiDef">nyanfi.def</a> という名前で保存されます。<br>
       </div>
       <div class="spc_box">
         <span class="btn_frame">集計</span>ボタンを押すと、選択している項目に有効な数値がある場合、その合計、平均、最小、最大値、中央値、分散、標準偏差を計算して表示します。<br>
@@ -275,8 +262,7 @@
       <div class="spc_box">
         右クリックメニューでは、内容の「<b>コピー</b>」(範囲指定可)や「<b>URLを開く</b>」が可能です。<br>
       </div>
-      <a href="#FixedLen">→ FixedLen</a>　<a href="#CsvCalc">→ CsvCalc</a>　<a href="#CsvGraph">→ CsvGraph</a>　<a
-        href="#ExportCsv">→ ExportCsv</a>
+      <a href="#FixedLen">→ FixedLen</a>　<a href="#CsvCalc">→ CsvCalc</a>　<a href="#CsvGraph">→ CsvGraph</a>　<a href="#ExportCsv">→ ExportCsv</a>
     </dd>
 
     <dt id="CursorDown">CursorDown<span class="pram_text">[_{行数|HP|FP}]</span></dt>
@@ -396,8 +382,7 @@
     <dd><a href="hid00065.htm">文字列検索ダイアログ</a>を表示し、検索を行います。<br>
       バイナリ・ダンプ表示の場合は、文字列検索の他にバイト列検索も可能です。<br>
       なおダイアログを閉じても、<a href="#FindDown">FindDown</a> や <a href="#FindUp">FindUp</a> コマンドで直前の検索条件による再検索ができます。<br>
-      <a href="#Highlight">→ Highlight</a>　<a href="#IncSearch">→ IncSearch</a>　<a href="#IncSearch">→ IncSearch</a>　<a
-        href="#Grep">→ Grep</a>
+      <a href="#Highlight">→ Highlight</a>　<a href="#IncSearch">→ IncSearch</a>　<a href="#IncSearch">→ IncSearch</a>　<a href="#Grep">→ Grep</a>
       <br>
     </dd>
 
@@ -454,13 +439,10 @@
 
     <dt id="FindTagName">FindTagName<span class="pram_text">[_EJ][;CO]</span></dt>
     <dd><a href="hid00083.htm#Dialog">タグ名検索ダイアログ</a> を開いて <b>tags</b> からタグ名を検索した後、ダイレクトタグジャンプを行います。<br>
-      パラメータに <b>EJ</b> を指定すると ダイレクトタグジャンプをテキストエディタで(<a href="#TagJumpDirect">TagJumpDirect</a>)、そうでない場合はテキストビューアで(<a
-        href="#TagViewDirect">TagViewDirect</a>)行います。<br>
-      パラメータに <b>CO</b> を指定すると、現在閲覧中のファイルに関するタグ名だけを検索します。この場合、ダイアログで何も入力していないと、すべてのタグが一覧表示されます。用途によっては<a
-        href="hid00066.htm">関数一覧</a>より便利かもしれません。<br>
+      パラメータに <b>EJ</b> を指定すると ダイレクトタグジャンプをテキストエディタで(<a href="#TagJumpDirect">TagJumpDirect</a>)、そうでない場合はテキストビューアで(<a href="#TagViewDirect">TagViewDirect</a>)行います。<br>
+      パラメータに <b>CO</b> を指定すると、現在閲覧中のファイルに関するタグ名だけを検索します。この場合、ダイアログで何も入力していないと、すべてのタグが一覧表示されます。用途によっては<a href="hid00066.htm">関数一覧</a>より便利かもしれません。<br>
       複数のパラメータを指定する場合は <b>;</b> (セミコロン)で区切ってください。<br>
-      <a href="#TagJumpDirect">→ TagJumpDirect</a>　<a href="#TagViewDirect">→ TagViewDirect</a>　<a
-        href="#FunctionList">→ FunctionList</a>
+      <a href="#TagJumpDirect">→ TagJumpDirect</a>　<a href="#TagViewDirect">→ TagViewDirect</a>　<a href="#FunctionList">→ FunctionList</a>
     </dd>
 
     <dt id="FixedLen">FixedLen<span class="pram_text">[_{ON|OFF|制限幅}]</span></dt>
@@ -472,16 +454,13 @@
         固定長表示では、項目ごとに最大幅で桁位置を合わせて整形表示します。項目数は1行目の内容に基づいています。<br>
         1レコードが1行に収まらないと見にくくなりますが、<a href="hid00011.htm#FixedLimit">オプション設定 - テキストビューア</a>
         の「<b>固定長表示の制限幅</b>」を設定して省略表示すると収まるかもしれません。この値はパラメータでも指定できます。<br>
-        また右クリックメニューの「<b>列幅の最小化</b>」で項目を選んでチェックすると、その列幅が最小化され内容が非表示になります。設定内容は、CSV/TSVファイルの代替データストリームに <a
-          href="hid00102.htm#NyanfiDef">nyanfi.def</a> という名前で保存されます。<br>
+        また右クリックメニューの「<b>列幅の最小化</b>」で項目を選んでチェックすると、その列幅が最小化され内容が非表示になります。設定内容は、CSV/TSVファイルの代替データストリームに <a href="hid00102.htm#NyanfiDef">nyanfi.def</a> という名前で保存されます。<br>
         <a href="hid00023.htm">オプション設定 - フォント・配色</a> -
         配色の「<b>固定長表示の縦罫線</b>」を設定すると、固定長表示時に縦罫線が表示されます。ただし、各レコードの2行目以降には表示されません。<br>
       </div>
-      固定長表示の場合、カーソル位置項目のソート(<a href="#Sort">Sort</a>)、集計(<a href="#CsvCalc">CsvCalc</a>)、グラフ表示(<a
-        href="#CsvGraph">CsvGraph</a>)が可能です。<br>
+      固定長表示の場合、カーソル位置項目のソート(<a href="#Sort">Sort</a>)、集計(<a href="#CsvCalc">CsvCalc</a>)、グラフ表示(<a href="#CsvGraph">CsvGraph</a>)が可能です。<br>
       レコード毎の項目内容は、<b>CSV/TSVレコード</b> (<a href="#CsvRecord">CsvRecord</a>)でも確認できます。<br>
-      <a href="#CsvRecord">→ CsvRecord</a>　<a href="#CsvCalc">→ CsvCalc</a>　<a href="#CsvGraph">→ CsvGraph</a>　<a
-        href="#Sort">→ Sort</a>　<a href="#ExportCsv">→ ExportCsv</a>
+      <a href="#CsvRecord">→ CsvRecord</a>　<a href="#CsvCalc">→ CsvCalc</a>　<a href="#CsvGraph">→ CsvGraph</a>　<a href="#Sort">→ Sort</a>　<a href="#ExportCsv">→ ExportCsv</a>
     </dd>
 
     <dt id="FunctionList">FunctionList<span class="pram_text">[_FF][;FZ]</span></dt>
@@ -514,7 +493,7 @@
       見つからなかった場合は、ヘルプ画面がキーワードタブになります。<br>
       <b>例</b>: HelpCurWord_"C:\Program Files (x86)\Embarcadero\Studio\23.0\Help\Doc\ja\vcl.chm"
       <div class="spc_box">
-      このコマンドは、<b>hhh.exe</b> (saitou155 氏作)を利用しています。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。<br>
+        このコマンドは、<b>hhh.exe</b> (saitou155 氏作)を利用しています。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。<br>
       </div>
     </dd>
 
@@ -528,8 +507,7 @@
     <dt id="HtmlToText">HtmlToText<span class="pram_text">[_{ON|OFF}[;{[^]MD|TX}]]</span></dt>
     <dd>パラメータを指定しない場合、HTML文書で、HTML→テキスト変換表示/通常表示(ソース)をトグルで切り替えます。<br>
       パラメータに <b>ON</b> を指定するとHTML→テキスト変換表示、<b>OFF</b> では通常表示になります。<br>
-      &lt;H1&gt;～&lt;H6&gt; は、見出しマーク文字が付加されます。箇条書きなどにも対応。リンク先のURLは括弧内に表示されます。また存在するローカルファイルへのリンクも表示され、<a
-        href="#TagJump">TagJump</a> や <a href="#TagView">TagView</a> コマンドで開けます(name や id による指定は無効)。<br>
+      &lt;H1&gt;～&lt;H6&gt; は、見出しマーク文字が付加されます。箇条書きなどにも対応。リンク先のURLは括弧内に表示されます。また存在するローカルファイルへのリンクも表示され、<a href="#TagJump">TagJump</a> や <a href="#TagView">TagView</a> コマンドで開けます(name や id による指定は無効)。<br>
       <div class="spc_box">
         さらに <b>MD</b> を指定すると、<a href="hid00011.htm#HtmlToText">→ オプション設定 - テキストビューア -「HTML→テキスト変換」</a> の 「<b>Markdown記法に変換</b>」オプションが有効に、<b>TX</b> を指定するとオプションが無効になります。また、<b>^MD</b> では状態が反転します。<br>
         <b>例</b>: HtmlToText_ON;MD
@@ -949,16 +927,14 @@
     <dt id="ShowToolBar">ShowToolBar<span class="pram_text">[_{ON|OFF}]</span></dt>
     <dd>パラメータを指定しない場合、<b>ツールバー</b>の表示/非表示をトグルで切り替えます。<br>
       パラメータに <b>ON</b> を指定すると表示、<b>OFF</b> で非表示になります。<br>
-      <a href="hid00068.htm">「ツールバーの設定」ダイアログ</a>は、ツールバーをダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」あるいは <a
-        href="#ToolBarDlg">ToolBarDlg</a> コマンドで表示されます。<br>
+      <a href="hid00068.htm">「ツールバーの設定」ダイアログ</a>は、ツールバーをダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」あるいは <a href="#ToolBarDlg">ToolBarDlg</a> コマンドで表示されます。<br>
       <a href="#ToolBarDlg">→ ToolBarDlg</a>　<a href="#ExeToolBtn">→ ExeToolBtn</a>
     </dd>
 
     <dt id="Sort">Sort<span class="pram_text">[_{AO|DO}]</span></dt>
     <dd>テキスト表示で、全体を改行単位でソートします。<br>
       パラメータに <b>AO</b> を指定すると昇順、<b>DO</b> で降順になります。無指定の場合は、ソートが解除され行番号順に戻ります。<br>
-      CSV/TSVファイルで固定長表示の場合、カーソル位置の項目がソート対象になります。<b>CSV/TSVレコード</b> (<a
-        href="#CsvRecord">CsvRecord</a>)や右クリックメニューで「<b>先頭行が項目名</b>」をチェックしていると、先頭行はソートされません。<br>
+      CSV/TSVファイルで固定長表示の場合、カーソル位置の項目がソート対象になります。<b>CSV/TSVレコード</b> (<a href="#CsvRecord">CsvRecord</a>)や右クリックメニューで「<b>先頭行が項目名</b>」をチェックしていると、先頭行はソートされません。<br>
       ソートは右クリックメニューからも可能です。<br>
       <a href="#FixedLen">→ FixedLen</a>　<a href="#CsvRecord">→ CsvRecord</a>　<a href="#ExportCsv">→ ExportCsv</a>
     </dd>
@@ -975,8 +951,7 @@
       HTML→テキスト変換表示の場合、file:://～ という形式のローカルファイルや、Markdown記法によるリンクにも対応(name や id による移動先指定は無効)。<br>
       また #include 相対ファイル名 という形式も開けます。<br>
       行番号の指定のためのパラメータは、<a href="hid00012.htm">オプション設定 - エディタ</a>で設定できます。<br>
-      パラメータに <b>DJ</b> を指定すると、タグジャンプができなかった場合、カーソル位置の単語で<a href="hid00083.htm">ダイレクトタグジャンプ</a> (<a
-        href="#TagJumpDirect">TagJumpDirect</a>)を試みます。<br>
+      パラメータに <b>DJ</b> を指定すると、タグジャンプができなかった場合、カーソル位置の単語で<a href="hid00083.htm">ダイレクトタグジャンプ</a> (<a href="#TagJumpDirect">TagJumpDirect</a>)を試みます。<br>
       <a href="#TagView">→ TagView</a>　<a href="#TagJumpDirect">→ TagJumpDirect</a>
     </dd>
 
@@ -990,8 +965,7 @@
     <dd>現在行の内容でタグジャンプを行い、テキストビューアで開きます。<br>
       選択中ならその文字列、そうでない場合はカーソル行を対象とします。行内に複数のジャンプ先がある場合、カーソル位置から最初に見つかったものを開きます。<br>
       HTML→テキスト変換表示の場合、file:://～ という形式のローカルファイルへのリンクにも対応(name や id による移動先指定は無効)。また #include 相対ファイル名 という形式も開けます。<br>
-      パラメータに <b>DJ</b> を指定すると、タグジャンプができなかった場合、カーソル位置の単語で<a href="hid00083.htm">ダイレクトタグジャンプ</a> (<a
-        href="#TagViewDirect">TagViewDirect</a>)を試みます。<br>
+      パラメータに <b>DJ</b> を指定すると、タグジャンプができなかった場合、カーソル位置の単語で<a href="hid00083.htm">ダイレクトタグジャンプ</a> (<a href="#TagViewDirect">TagViewDirect</a>)を試みます。<br>
       <a href="#TagJump">→ TagJump</a>　<a href="#TagViewDirect">→ TagViewDirect</a>
     </dd>
 
