--- a/help/src/hid00007.htm
+++ b/help/src/hid00007.htm
@@ -34,8 +34,7 @@
   <p>
     ファイルリストで<span class="btn_frame">ENTER</span>キーを押すか、<a href="hid00005.htm#ImageViewer">ImageViewer</a>
     コマンドを実行すると、イメージビューア画面に変わり、カーソル位置の画像ファイルを表示します。また実行ファイルやDLLの場合は、アイコンを抽出して一覧表示します。<br>
-    また、カレント側にある画像ファイルの<b>サムネイル</b>を一覧表示することもできます。ただし、<a
-      href="hid00052.htm">ファイル名検索</a>の結果リストの場合、アーカイブ内ファイルは表示対象から外されます。<br>
+    また、カレント側にある画像ファイルの<b>サムネイル</b>を一覧表示することもできます。ただし、<a href="hid00052.htm">ファイル名検索</a>の結果リストの場合、アーカイブ内ファイルは表示対象から外されます。<br>
   </p>
   <p>
     画像ファイルの表示は、<b>WIC</b> コーデックで行っています。<br>
@@ -67,12 +66,7 @@
   <p>コマンド構文において、<b>[ ]</b> 内は任意、<b>{ }</b> 内は相互に排他的な選択肢です。</p>
 
   <p class="link_box">
-    <a href="#AlphaBlend">A</a> <a href="#Calculator">C</a> <a href="#DebugCmdFile">D</a> <a href="#EndFile">E</a> <a
-      href="#FileEdit">F</a> <a href="#GrayScale">G</a> <a href="#HelpContents">H</a> <a href="#InputCommands">I</a> <a
-      href="#JumpIndex">J</a> <a href="#KeyList">K</a> <a href="#ListFileInfo">L</a> <a href="#Mark">M</a> <a
-      href="#NewWorkList">N</a> <a href="#OpenByApp">O</a> <a href="#PageBind">P</a> <a href="#RotateLeft">R</a> <a
-      href="#SaveAsWorkList">S</a> <a href="#TagSelect">T</a> <a href="#WarnHighlight">W</a> <a
-      href="#ZoomIn">Z</a>　　　　<a href="hid00100.htm#IV">→ コマンド索引</a> ／ <a href="hid00101.htm#IV">→ 機能別索引</a>
+    <a href="#AlphaBlend">A</a> <a href="#Calculator">C</a> <a href="#DebugCmdFile">D</a> <a href="#EndFile">E</a> <a href="#FileEdit">F</a> <a href="#GrayScale">G</a> <a href="#HelpContents">H</a> <a href="#InputCommands">I</a> <a href="#JumpIndex">J</a> <a href="#KeyList">K</a> <a href="#ListFileInfo">L</a> <a href="#Mark">M</a> <a href="#NewWorkList">N</a> <a href="#OpenByApp">O</a> <a href="#PageBind">P</a> <a href="#RotateLeft">R</a> <a href="#SaveAsWorkList">S</a> <a href="#TagSelect">T</a> <a href="#WarnHighlight">W</a> <a href="#ZoomIn">Z</a>　　　　<a href="hid00100.htm#IV">→ コマンド索引</a> ／ <a href="hid00101.htm#IV">→ 機能別索引</a>
   </p>
 
   <dl class="indent1">
@@ -109,8 +103,7 @@
 
     <dt id="ClearMark">ClearMark</dt>
     <dd>カレントのすべての栞マークを解除します。<br>
-      <a href="#Mark">→ Mark</a>　<a href="#NextMark">→ NextMark</a>　<a href="#PrevMark">→ PrevMark</a>　<a
-        href="#SelMark">→ SelMark</a>
+      <a href="#Mark">→ Mark</a>　<a href="#NextMark">→ NextMark</a>　<a href="#PrevMark">→ PrevMark</a>　<a href="#SelMark">→ SelMark</a>
     </dd>
 
     <dt id="ClipCopy">ClipCopy<span class="pram_text">[_VI]</span></dt>
@@ -121,8 +114,7 @@
 
     <dt id="Close">Close</dt>
     <dd>イメージビューアを閉じます。<br>
-      <span class="btn_frame">ENTER</span>キーまたは<span
-        class="btn_frame">ESC</span>キー(通常表示時)を押すか、サムネイル以外の部分をダブルクリックしても閉じることができます。
+      <span class="btn_frame">ENTER</span>キーまたは<span class="btn_frame">ESC</span>キー(通常表示時)を押すか、サムネイル以外の部分をダブルクリックしても閉じることができます。
     </dd>
 
     <dt id="CmdFileList">CmdFileList<span class="pram_text">[_FF]</span></dt>
@@ -139,8 +131,7 @@
 
     <dt id="ColorPicker">ColorPicker</dt>
     <dd>カラーピッカーを表示します。<br>
-      画像をクリック(<span
-        class="btn_frame">ENTER</span>キーでも可)すると、その位置のピクセル色を、コンボボックスで選択した書式でクリップボードにコピーします。また「<b>BITMAP</b>(～)」を選んでいると、括弧内のサイズの正方形を取得色で塗りつぶしたものをビットマップとしてコピーします。<br>
+      画像をクリック(<span class="btn_frame">ENTER</span>キーでも可)すると、その位置のピクセル色を、コンボボックスで選択した書式でクリップボードにコピーします。また「<b>BITMAP</b>(～)」を選んでいると、括弧内のサイズの正方形を取得色で塗りつぶしたものをビットマップとしてコピーします。<br>
       「<b>9px平均</b>」をチェックすると、隣接する9ピクセルの平均色を取得します。また、「<b>補色</b>」をチェックすると補色を、「<b>セーフカラー</b>」をチェックすると、Webセーフカラーの近似色を取得します。<br>
       <div class="spc_box">
         「<b>連続取得</b>」では、ピクセル色を連続的に取得できます(ビットマップのコピーでは不可)。<br>
@@ -321,8 +312,7 @@
     <dt id="Loupe">Loupe<span class="pram_text">[_{ON|OFF}]</span></dt>
     <dd>パラメータを指定しない場合、ルーペの表示/非表示をトグルで切り替えます。<br>
       パラメータに <b>ON</b> を指定すると表示、<b>OFF</b> では非表示になります。<br>
-      画像(メタファイルは除く)のマウス位置を拡大表示します。倍率は<span class="btn_frame">×1</span><span class="btn_frame">×2</span><span
-        class="btn_frame">×4</span><span class="btn_frame">×8</span>ボタンか右クリックメニューで切り替えられます。拡大の際に補間は行われません。<br>
+      画像(メタファイルは除く)のマウス位置を拡大表示します。倍率は<span class="btn_frame">×1</span><span class="btn_frame">×2</span><span class="btn_frame">×4</span><span class="btn_frame">×8</span>ボタンか右クリックメニューで切り替えられます。拡大の際に補間は行われません。<br>
       サイドバーが表示されている場合、ファイル情報の上または下にルーペをドッキングすることもできます。<br>
       なお、クリックで一時的に等倍表示になっている間は、浮動化しているルーペは隠れます。<br>
       全画面表示では、サイドバーにドッキングされていない場合にのみ表示可能です。<br>
@@ -340,8 +330,7 @@
         さらに <b>IM</b> またはメモ内容を指定した場合は、(反転ではなく)栞マークとともにメモを設定します。<br>
         選択項目がない場合は、カーソル位置の項目が対象になります(<b>SL</b> を指定しない場合と同じ)。<br>
       </div>
-      <a href="#ClearMark">→ ClearMark</a>　<a href="#NextMark">→ NextMark</a>　<a href="#PrevMark">→ PrevMark</a>　<a
-        href="#MarkList">→ MarkList</a>　<a href="#SelMark">→ SelMark</a>
+      <a href="#ClearMark">→ ClearMark</a>　<a href="#NextMark">→ NextMark</a>　<a href="#PrevMark">→ PrevMark</a>　<a href="#MarkList">→ MarkList</a>　<a href="#SelMark">→ SelMark</a>
     </dd>
 
     <dt id="MarkList">MarkList<span class="pram_text">[_FF]</span></dt>
@@ -606,8 +595,7 @@
     <dd>パラメータを指定しない場合、シークバーの表示/非表示をトグルで切り替えます。<br>
       パラメータに <b>ON</b> を指定すると表示、<b>OFF</b> では非表示になります。<br>
       <a href="hid00020.htm">オプション設定 - イメージビューア</a>
-      で「<b>シークバーの始点を綴じ方向に合わす</b>」をチェックしていると、右綴じ見開き表示の場合にシークバーの始点も右端になります。さらに「<b>右綴じでNext/Prev入替</b>」をチェックしていると、キーによる前後移動(<a
-        href="hid00007.htm#NextFile">NextFile</a>/<a href="hid00007.htm#PrevFile">PrevFile</a> コマンド)も入れ替わります。
+      で「<b>シークバーの始点を綴じ方向に合わす</b>」をチェックしていると、右綴じ見開き表示の場合にシークバーの始点も右端になります。さらに「<b>右綴じでNext/Prev入替</b>」をチェックしていると、キーによる前後移動(<a href="hid00007.htm#NextFile">NextFile</a>/<a href="hid00007.htm#PrevFile">PrevFile</a> コマンド)も入れ替わります。
     </dd>
 
     <dt id="ShowStatusBar">ShowStatusBar<span class="pram_text">[_{ON|OFF}]</span></dt>
@@ -620,8 +608,7 @@
       パラメータに <b>ON</b> を指定すると表示、<b>OFF</b> で非表示になります。<br>
       <a href="hid00020.htm">オプション設定 - イメージビューア</a>
       で「<b>ツールバーをサイドバー上に表示</b>」をチェックしていると、画面上部ではなく、サイドバーの上端にツールバーが表示されます。<br>
-      <a href="hid00068.htm">「ツールバーの設定」ダイアログ</a>は、ツールバーをダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」あるいは <a
-        href="#ToolBarDlg">ToolBarDlg</a> コマンドで表示されます。<br>
+      <a href="hid00068.htm">「ツールバーの設定」ダイアログ</a>は、ツールバーをダブルクリックするか、<b>設定メニュー</b> - 「<b>ツールバーの設定</b>」あるいは <a href="#ToolBarDlg">ToolBarDlg</a> コマンドで表示されます。<br>
       <a href="#ToolBarDlg">→ ToolBarDlg</a>　<a href="#ExeToolBtn">→ ExeToolBtn</a>
     </dd>
 
@@ -636,8 +623,7 @@
 
     <dt id="SimilarImage">SimilarImage<span class="pram_text">[_{DH|AH|PH}][;HG][;CC][;サイズ][;CB]</span></dt>
     <dd>カーソル位置の画像との類似性に基づいてソートを行います。<br>
-      デフォルトでは、画像を32×32のサイズに縮小し、各ピクセルについてHSV色空間での隔たりを計算して、その合計が小さい順に並べ替えます。縮小には、サムネイルの縮小アルゴリズムを用います(<a
-        href="hid00020.htm#Thumbnail">オプション設定 - イメージビューア</a> - 縮小)。<br>
+      デフォルトでは、画像を32×32のサイズに縮小し、各ピクセルについてHSV色空間での隔たりを計算して、その合計が小さい順に並べ替えます。縮小には、サムネイルの縮小アルゴリズムを用います(<a href="hid00020.htm#Thumbnail">オプション設定 - イメージビューア</a> - 縮小)。<br>
       <div class="spc_box">
         パラメータに <b>DH</b> を指定すると、<b>dHash</b> (difference
         hash)でソートを行います。縮小画像をグレースケール化し、隣接領域との差分からハッシュを求め、そのハミング距離の小さい順に並べ替えます。<br>
@@ -766,8 +752,7 @@
     </dd>
 
     <dt id="WorkList">WorkList</dt>
-    <dd>イメージビューアに<a
-        href="hid00060.htm">ワークリスト</a>の内容を表示します。もう一度実行するとカレントパスの内容表示に戻ります。ただしカレントがワークリストだった場合は、そのまま切り替わりません。<br>
+    <dd>イメージビューアに<a href="hid00060.htm">ワークリスト</a>の内容を表示します。もう一度実行するとカレントパスの内容表示に戻ります。ただしカレントがワークリストだった場合は、そのまま切り替わりません。<br>
       <a href="#HomeWorkList">→ HomeWorkList</a>　<a href="#LoadWorkList">→ LoadWorkList</a>　<a href="#NewWorkList">→
         NewWorkList</a>
     </dd>
@@ -775,19 +760,16 @@
     <dt id="ZoomIn">ZoomIn</dt>
     <dd>ズームインします(アイコン表示の場合は無効)。<br>
       ズーム倍率は、10、25、50、75、100、150、200、300、400%のいずれかになります。<br>
-      縮小・拡大アルゴリズムは <a href="hid00020.htm">オプション設定 - イメージビューア</a> で選択できます(<a
-        href="#SetInterpolation">SetInterpolation</a> コマンドでも変更可能)。<br>
+      縮小・拡大アルゴリズムは <a href="hid00020.htm">オプション設定 - イメージビューア</a> で選択できます(<a href="#SetInterpolation">SetInterpolation</a> コマンドでも変更可能)。<br>
       なおメタファイルは、ベクタイメージとして処理されます。<br>
-      <a href="#ZoomOut">→ ZoomOut</a>　<a href="#FittedSize">→ FittedSize</a>　<a href="#EqualSize">→ EqualSize</a>　<a
-        href="#SetInterpolation">→ SetInterpolation</a>
+      <a href="#ZoomOut">→ ZoomOut</a>　<a href="#FittedSize">→ FittedSize</a>　<a href="#EqualSize">→ EqualSize</a>　<a href="#SetInterpolation">→ SetInterpolation</a>
     </dd>
 
     <dt id="ZoomOut">ZoomOut</dt>
     <dd>ズームアウトします(アイコン表示の場合は無効)。<br>
       ズーム倍率は、10、25、50、75、100、150、200、300、400%のいずれかになります。<br>
       縮小・拡大アルゴリズムは <a href="hid00020.htm">オプション設定 - イメージビューア</a> で選択できます。なおメタファイルは、ベクタイメージとして処理されます。<br>
-      <a href="#ZoomIn">→ ZoomIn</a>　<a href="#FittedSize">→ FittedSize</a>　<a href="#EqualSize">→ EqualSize</a>　<a
-        href="#SetInterpolation">→ SetInterpolation</a>
+      <a href="#ZoomIn">→ ZoomIn</a>　<a href="#FittedSize">→ FittedSize</a>　<a href="#EqualSize">→ EqualSize</a>　<a href="#SetInterpolation">→ SetInterpolation</a>
     </dd>
   </dl>
   <br><br><br><br>
