--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -30,9 +30,7 @@
   <h1>オプション設定 - デザイン</h1>
 
   <p class="link_box">
-    <a href="#Layout">画面レイアウト</a> ／ <a href="#FileList">ファイルリスト</a> ／ <a href="#BgImage">背景画像</a> ／ <a
-      href="#TabBar">タブバー</a> ／ <a href="#DriveInfo">ドライブ情報の書式</a> ／ <a href="#StatusBar">ステータスバーの書式</a> ／ <a
-      href="#ModalEffect">モーダル表示効果</a>
+    <a href="#Layout">画面レイアウト</a> ／ <a href="#FileList">ファイルリスト</a> ／ <a href="#BgImage">背景画像</a> ／ <a href="#TabBar">タブバー</a> ／ <a href="#DriveInfo">ドライブ情報の書式</a> ／ <a href="#StatusBar">ステータスバーの書式</a> ／ <a href="#ModalEffect">モーダル表示効果</a>
   </p>
   <br>
 
@@ -49,8 +47,7 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> Dir.情報も上下</dt>
-    <dd>「<b>上下に分割</b>」と同時にチェックすると、<a
-        href="hid00004.htm#DirInfo">ディレクトリ情報</a>を分けてそれぞれのリストの上端に表示します。ディレクトリ関係は、上側のディレクトリ情報右端に表示されます。
+    <dd>「<b>上下に分割</b>」と同時にチェックすると、<a href="hid00004.htm#DirInfo">ディレクトリ情報</a>を分けてそれぞれのリストの上端に表示します。ディレクトリ関係は、上側のディレクトリ情報右端に表示されます。
       <br>
       チェックしないと、画面上端に左右均等でディレクトリ情報が表示されます。<br>
       <br>
@@ -156,9 +153,7 @@
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 幅を固定</dt>
     <dd>左右境界のマウスドラッグによるリスト幅変更を禁止します。<br>
-      ただし、<a href="hid00005.htm#WidenCurList">WidenCurList</a>、<a href="hid00005.htm#BorderLeft">BorderLeft</a>、<a
-        href="hid00005.htm#BorderRight">BorderRight</a>、<a
-        href="hid00005.htm#EqualListWidth">EqualListWidth</a>コマンドによる変更は可能です。<br>
+      ただし、<a href="hid00005.htm#WidenCurList">WidenCurList</a>、<a href="hid00005.htm#BorderLeft">BorderLeft</a>、<a href="hid00005.htm#BorderRight">BorderRight</a>、<a href="hid00005.htm#EqualListWidth">EqualListWidth</a>コマンドによる変更は可能です。<br>
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 長い名前は末尾を省略</dt>
@@ -176,18 +171,13 @@
 
     <dt class="no_bg_indent1" id="FindPathCol"><img src="chkbox.png" alt=""> 結果リストに「場所」列を表示</dt>
     <dd>チェックすると、各種検索の結果リストに「<b>場所</b>」列が表示され(カレント下は相対表示)、パス付きファイル名によるソートが行われます。<br>
-      この設定は、<a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a
-        href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a
-        href="hid00005.htm#FindDuplDlg">FindDuplDlg</a>、<a href="hid00005.htm#FindHardLink">FindHardLink</a>、<a
-        href="hid00005.htm#FindMark">FindMark</a>、<a href="hid00005.htm#FindTag">FindTag</a>、<a
-        href="hid00005.htm#DiffDir">DiffDir</a> コマンドの結果リストに対して共通で適用されます。<br>
+      この設定は、<a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a href="hid00005.htm#FindDuplDlg">FindDuplDlg</a>、<a href="hid00005.htm#FindHardLink">FindHardLink</a>、<a href="hid00005.htm#FindMark">FindMark</a>、<a href="hid00005.htm#FindTag">FindTag</a>、<a href="hid00005.htm#DiffDir">DiffDir</a> コマンドの結果リストに対して共通で適用されます。<br>
       <b>最小列幅</b> <img src="edit.png" alt="">
       で表示幅の最小値を指定できます。結果リストの幅が反対側のリスト幅よりも大きい場合、左右差の1/4が列幅に加算されます(名前と場所の幅を拡大)。表示幅に収まらないときは順次省略されますが、階層数が多いと末尾が欠ける場合があります。<br>
     </dd>
 
     <dt class="no_bg_indent1" id="FindTagCol"><img src="chkbox.png" alt=""> タグ検索では「タグ」列を表示</dt>
-    <dd>上の「<b>結果リストに「場所」列を表示</b>」がチェックされている場合にこれをチェックすると、タグ検索(<a
-        href="hid00005.htm#FindTag">FindTag</a>)の結果リストで「<b>場所</b>」列の代わりに「<b>タグ(場所)</b>」列が表示されます。なお、ソートは場所(パス付きファイル名)に基づいて行われます。<br>
+    <dd>上の「<b>結果リストに「場所」列を表示</b>」がチェックされている場合にこれをチェックすると、タグ検索(<a href="hid00005.htm#FindTag">FindTag</a>)の結果リストで「<b>場所</b>」列の代わりに「<b>タグ(場所)</b>」列が表示されます。なお、ソートは場所(パス付きファイル名)に基づいて行われます。<br>
       <b>最小列幅</b> <img src="edit.png" alt="">
       で表示幅の最小値を指定できます。結果リストの幅が反対側のリスト幅よりも大きい場合、左右差の1/4が列幅に加算されます(名前とタグの幅を拡大)。<br>
       <img src="chkbox.png" alt=""> <b>並びをソート</b>
@@ -375,8 +365,7 @@
           <dd>Pagefile Usage をKB単位で表示します。</dd>
         </dl>
 
-        <b>例</b> <span class="inp_box">yyyy/mm/dd(ddd) hh:nn│$BP $PS(<img src="char_PS.png" alt="" height="18"
-            width="40">) $NS(<img src="char_NS.png" alt="" height="18" width="48">) │'WS:'$WS│'PF:'$PF</span>
+        <b>例</b> <span class="inp_box">yyyy/mm/dd(ddd) hh:nn│$BP $PS(<img src="char_PS.png" alt="" height="18" width="40">) $NS(<img src="char_NS.png" alt="" height="18" width="48">) │'WS:'$WS│'PF:'$PF</span>
       </div>
       <br>
     </dd>
@@ -419,23 +408,20 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 情報パネルをフラット表示</dt>
-    <dd><a href="hid00004.htm#DirInfo">ディレクトリ情報</a>、ディレクトリ関係、<a
-        href="hid00004.htm#DriveInfo">ドライブ情報</a>部分をフラット表示にします。<br>
+    <dd><a href="hid00004.htm#DirInfo">ディレクトリ情報</a>、ディレクトリ関係、<a href="hid00004.htm#DriveInfo">ドライブ情報</a>部分をフラット表示にします。<br>
       なおこれがチェックされている場合、タブバーが表示されていて、スタイルが「タブ」または「タブ(斜)」で「タブの輪郭線」色が指定されていると、ディレクトリ情報との間に「タブの輪郭線」色で境界線が描画されます(アクティブなタブの底辺部分は除く)。<br>
     </dd>
 
     <dt class="no_bg_indent1" id="ScrollBar">スクロールバー <img src="combobox.png" alt="">　<span class="def_text">(デフォルト:
         標準)</span></dt>
-    <dd>コンボボックスで「<b>シンプル</b>」、「<b>シンプル(3/4幅)</b>」、「<b>シンプル(1/2幅)</b>」、「<b>シンプル(画像)</b>」のいずれかを選ぶと、配色指定可能なリスト、一覧、ダイアログ(<a
-        href="hid00081.htm">XMLビューア</a>は除く)のスクロールバーが独自のものに変わります。<br>
+    <dd>コンボボックスで「<b>シンプル</b>」、「<b>シンプル(3/4幅)</b>」、「<b>シンプル(1/2幅)</b>」、「<b>シンプル(画像)</b>」のいずれかを選ぶと、配色指定可能なリスト、一覧、ダイアログ(<a href="hid00081.htm">XMLビューア</a>は除く)のスクロールバーが独自のものに変わります。<br>
       このシンプルスクロールバーは、スクロールノブだけからなり、<a href="hid00023.htm#Color">オプション設定 - フォント・配色</a>
       で「<b>シンプルスクロールバーの背景色</b>」、「<b>シンプルスクロールノブの色</b>」、「<b>シンプルスクロールノブの輪郭色</b>」を指定できます。この場合、「～<b>ノブの輪郭色</b>」を「<b>無効</b>」にすると、単純な長方形でノブが描かれます。<br>
       また「<b>シンプル(画像)</b>」を選ぶと、ノブの画像をダイアログで指定できます。スクロールバーの幅は、指定画像の幅 + 2px(余裕)
       か標準幅のうち小さい方になり、ノブの表示領域に画像がストレッチ表示されます。<b>PNG</b>
       画像ではアルファチャンネルに対応しており、「～<b>ノブの色</b>」の上に重ねられます。「～<b>ノブの輪郭色</b>」は無視されます。水平スクロールバーでは、指定画像を回転(90°+左右反転)してストレッチ表示します。<br>
       <div class="spc_box">
-        シンプルスクロールバーを利用している場合、ファイラーで<a href="hid00050.htm">インクリメンタルサーチ</a>を行ったり、<a href="hid00006.htm">テキストビューア</a>/<a
-          href="hid00073.htm">一覧ダイアログ</a>で文字列検索を行ったりすると、ヒット位置を示す半透明の横線がスクロールバー上に表示されます。表示色は「<b>シンプルスクロールバーのヒット位置</b>」で指定できます(無効にすると非表示)。<br>
+        シンプルスクロールバーを利用している場合、ファイラーで<a href="hid00050.htm">インクリメンタルサーチ</a>を行ったり、<a href="hid00006.htm">テキストビューア</a>/<a href="hid00073.htm">一覧ダイアログ</a>で文字列検索を行ったりすると、ヒット位置を示す半透明の横線がスクロールバー上に表示されます。表示色は「<b>シンプルスクロールバーのヒット位置</b>」で指定できます(無効にすると非表示)。<br>
         また「<b>シンプルスクロールバーの選択位置(FL)</b>」を設定していると、ファイラーで項目を選択している場合、選択位置を示す半透明の横線がスクロールバー上に表示されます。<br>
         なおノブのサイズは全体に対する1ページ分の割合になりますが、最小サイズの制限があるため、ノブ上にヒット/選択表示があっても現在のページ範囲から外れている場合があります。<br>
       </div>
@@ -444,8 +430,7 @@
       </div>
     </dd>
 
-    <dt id="PinMark" class="no_bg_indent1">固定ピン <img src="edit.png" alt="">　<span class="def_text">(デフォルト: <img
-          src="char_Pin.png" alt="" height="18" width="19">)</span></dt>
+    <dt id="PinMark" class="no_bg_indent1">固定ピン <img src="edit.png" alt="">　<span class="def_text">(デフォルト: <img src="char_Pin.png" alt="" height="18" width="19">)</span></dt>
     <dd><a href="hid00005.htm#FixTabPath">FixTabPath</a> コマンドでファイルリストを固定したときに表示されるマーク文字を変更できます。<br>
       絵文字を指定した場合、実際の画面ではカラー表示になります。<br>
       <br>
@@ -453,8 +438,7 @@
 
     <dt id="ModalEffect"><img src="grpbox.png" alt=""> モーダル表示効果</dt>
     <dd>
-      <img src="chkbox.png" alt=""> <b>有効</b> がチェックされていると、ファイラーで何らかのダイアログ(オプション設定や<a
-        href="hid00076.htm">アプリケーション一覧</a>などは除く)をモーダル表示した場合、メイン画面全体が半透明のスクリーンで覆われます。<br>
+      <img src="chkbox.png" alt=""> <b>有効</b> がチェックされていると、ファイラーで何らかのダイアログ(オプション設定や<a href="hid00076.htm">アプリケーション一覧</a>などは除く)をモーダル表示した場合、メイン画面全体が半透明のスクリーンで覆われます。<br>
       また <a href="hid00005.htm#LockKeyMouse">LockKeyMouse</a> コマンドでキーボード/マウスをロックした際に、デスクトップ全体がスクリーンで覆われます。<br>
       スクリーンの不透明度(0:透明～255:不透明)や色を指定できます。<br>
       <br>
