--- a/help/src/hid00011.htm
+++ b/help/src/hid00011.htm
@@ -6,29 +6,29 @@
   <title>オプション設定 - テキストビューア</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="CSV">
-	<param name="Keyword" value="FunctionList">
-	<param name="Keyword" value="HTML→テキスト変換">
-	<param name="Keyword" value="HtmlToText">
-	<param name="Keyword" value="ListText">
-	<param name="Keyword" value="Markdown記法">
-	<param name="Keyword" value="SetColor">
-	<param name="Keyword" value="SetMargin">
-	<param name="Keyword" value="SetTab">
-	<param name="Keyword" value="SetTopAddr">
-	<param name="Keyword" value="SetWidth">
-	<param name="Keyword" value="ShowLineNo">
-	<param name="Keyword" value="ShowRuler">
-	<param name="Keyword" value="TSV">
-	<param name="Keyword" value="インデントガイド">
-	<param name="Keyword" value="スティッキー表示">
-	<param name="Keyword" value="テキストビューア">
-	<param name="Keyword" value="バイナリ・ダンプ表示">
-	<param name="Keyword" value="メモリマップドファイル">
-	<param name="Keyword" value="リッチテキスト">
-	<param name="Keyword" value="ルーラ">
-	<param name="Keyword" value="強調表示">
-	<param name="Keyword" value="青空文庫">
+    <param name="Keyword" value="CSV">
+    <param name="Keyword" value="FunctionList">
+    <param name="Keyword" value="HTML→テキスト変換">
+    <param name="Keyword" value="HtmlToText">
+    <param name="Keyword" value="ListText">
+    <param name="Keyword" value="Markdown記法">
+    <param name="Keyword" value="SetColor">
+    <param name="Keyword" value="SetMargin">
+    <param name="Keyword" value="SetTab">
+    <param name="Keyword" value="SetTopAddr">
+    <param name="Keyword" value="SetWidth">
+    <param name="Keyword" value="ShowLineNo">
+    <param name="Keyword" value="ShowRuler">
+    <param name="Keyword" value="TSV">
+    <param name="Keyword" value="インデントガイド">
+    <param name="Keyword" value="スティッキー表示">
+    <param name="Keyword" value="テキストビューア">
+    <param name="Keyword" value="バイナリ・ダンプ表示">
+    <param name="Keyword" value="メモリマップドファイル">
+    <param name="Keyword" value="リッチテキスト">
+    <param name="Keyword" value="ルーラ">
+    <param name="Keyword" value="強調表示">
+    <param name="Keyword" value="青空文庫">
   </object>
 </head>
 
@@ -147,8 +147,7 @@
     <dd>テキスト表示で、カーソル位置に #rgb、#rrggbb、0xbbggrr、$bbggrr 形式の数値がある場合、それが表す色をヒント表示します。</dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> ダブルクリックでURLを開く</dt>
-    <dd>チェックすると、その行にURLが含まれていた場合にそれを開きます。チェックを外すと、URLをダブルクリックした場合、それが選択されます(<a
-        href="hid00006.htm#SelCurWord">SelCurWord</a> に相当)。<br>
+    <dd>チェックすると、その行にURLが含まれていた場合にそれを開きます。チェックを外すと、URLをダブルクリックした場合、それが選択されます(<a href="hid00006.htm#SelCurWord">SelCurWord</a> に相当)。<br>
       なお、行末より後の部分をダブルクリックしたときはテキストビューアを閉じます。<br>
       <br>
     </dd>
@@ -206,8 +205,7 @@
       </div>
       <br>
 
-      <img src="chkbox.png" alt=""> <b>&lt;section&gt; / <img src="chkbox.png" alt=""> &lt;article&gt; / <img
-          src="chkbox.png" alt=""> &lt;nav&gt;の前に罫線挿入</b><br>
+      <img src="chkbox.png" alt=""> <b>&lt;section&gt; / <img src="chkbox.png" alt=""> &lt;article&gt; / <img src="chkbox.png" alt=""> &lt;nav&gt;の前に罫線挿入</b><br>
       <div class="indent1">
         HTML5で用いられる &lt;section&gt;、&lt;article&gt;、&lt;nav&gt;要素の前に罫線を挿入できます。
       </div>
@@ -240,8 +238,7 @@
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 青空文庫形式に対応する</dt>
     <dd>"［＃～］" という書式を含むテキストファイル(.txt)を青空文庫形式とみなし、以下のように表示します。<br>
-      "［＃～］" 部分はコメント色で、"《～》" 部分はルビ色で表示します(色は <a href="hid00023.htm">オプション設定 - フォント・配色</a> または <a
-        href="hid00006.htm#SetColor">SetColor</a> コマンドで設定)。<br>
+      "［＃～］" 部分はコメント色で、"《～》" 部分はルビ色で表示します(色は <a href="hid00023.htm">オプション設定 - フォント・配色</a> または <a href="hid00006.htm#SetColor">SetColor</a> コマンドで設定)。<br>
       「字下げ」や「地からの字上げ」にほぼ対応しています。<br>
       <a href="hid00006.htm#FunctionList">FunctionList</a> コマンドでは見出し一覧を表示します。<br>
     </dd>
