--- a/help/src/hid00019.htm
+++ b/help/src/hid00019.htm
@@ -41,11 +41,8 @@
   <p>コマンドに固有の設定を行います。</p>
 
   <p class="link_box">
-    <a href="#AppList">AppList</a> ／ <a href="#BorderLeftRight">BorderLeftRight</a> ／ <a
-      href="#CompleteDelete">CompleteDelete</a> ／ <a href="#DelJpgExif">DelJpgExif</a> ／ <a
-      href="#ExeCommandLine">ExeCommandLine</a> ／ <a href="#FileEdit">FileEdit</a> ／ <a href="#IncSearch">IncSearch</a>
-    ／ <a href="#InitialSearch">InitialSearch</a> ／ <a href="#SyncLR">SyncLR</a> ／ <a href="#TaskMan">TaskMan</a> ／ <a
-      href="#OpenStandard">OpenStandard</a> ／ <a href="#OpenByApp">OpenByApp</a> ／ <a href="#OpenByWin">OpenByWin</a> ／
+    <a href="#AppList">AppList</a> ／ <a href="#BorderLeftRight">BorderLeftRight</a> ／ <a href="#CompleteDelete">CompleteDelete</a> ／ <a href="#DelJpgExif">DelJpgExif</a> ／ <a href="#ExeCommandLine">ExeCommandLine</a> ／ <a href="#FileEdit">FileEdit</a> ／ <a href="#IncSearch">IncSearch</a>
+    ／ <a href="#InitialSearch">InitialSearch</a> ／ <a href="#SyncLR">SyncLR</a> ／ <a href="#TaskMan">TaskMan</a> ／ <a href="#OpenStandard">OpenStandard</a> ／ <a href="#OpenByApp">OpenByApp</a> ／ <a href="#OpenByWin">OpenByWin</a> ／
     <a href="#WebSearch">WebSearch</a>
   </p>
   <br>
@@ -55,8 +52,7 @@
     <dd><b>ホットキー</b><br>
       <div class="indent1">
         <a href="hid00076.htm">アプリケーション一覧</a>を呼び出すホットキーを設定します。<br>
-        ホットキーは、<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span
-          class="btn_frame">Alt</span><span class="btn_frame">Win</span>とキーとの組み合わせで指定してださい。それ以外の場合は、ホットキーの登録が解除されます。<br>
+        ホットキーは、<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span class="btn_frame">Alt</span><span class="btn_frame">Win</span>とキーとの組み合わせで指定してださい。それ以外の場合は、ホットキーの登録が解除されます。<br>
         なお、<b>NyanFi</b> を二重起動している場合、最初に起動した <b>NyanFi</b> のものが呼び出されます。<br>
       </div>
     </dd>
@@ -72,8 +68,7 @@
       <br>
     </dd>
 
-    <dt id="BorderLeftRight"><img src="grpbox.png" alt=""> <a href="hid00005.htm#BorderLeft">BorderLeft</a>、<a
-        href="hid00005.htm#BorderRight">BorderRight</a></dt>
+    <dt id="BorderLeftRight"><img src="grpbox.png" alt=""> <a href="hid00005.htm#BorderLeft">BorderLeft</a>、<a href="hid00005.htm#BorderRight">BorderRight</a></dt>
     <dd><b>１回の移動幅</b> <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 50)</span><br>
       <div class="indent1">
         コマンドを一回実行した際の移動幅を設定します。<br>
@@ -180,8 +175,7 @@
     <dt id="SyncLR"><img src="grpbox.png" alt=""> <a href="hid00005.htm#SyncLR">SyncLR</a></dt>
     <dd><img src="chkbox.png" alt=""> <b>項目位置も同期</b><br>
       <div class="indent1">
-        階層同期機能が有効な場合、カーソル位置と同名の項目が反対側にあれば、その位置も同期して点線カーソルが表示されます(<a
-          href="hid00005.htm#ToOppSameItem">ToOppSameItem</a>_NO コマンド相当)。<br>
+        階層同期機能が有効な場合、カーソル位置と同名の項目が反対側にあれば、その位置も同期して点線カーソルが表示されます(<a href="hid00005.htm#ToOppSameItem">ToOppSameItem</a>_NO コマンド相当)。<br>
       </div>
       <br>
     </dd>
@@ -198,29 +192,17 @@
     <dd><b>コマンドへの関連付け</b><br>
       <div class="indent1">
         特定のファイル拡張子に対して、標準とは異なるコマンド動作を指定できます。<br>
-        コマンドは、「<b>Windowsの関連付けで開く</b> (<a href="hid00005.htm#OpenByWin">OpenByWin</a>)」、「<b>独自の関連付けで開く</b> (<a
-          href="hid00005.htm#OpenByApp">OpenByApp</a>)」、「<b>テキストビューアで開く</b> (<a
-          href="hid00005.htm#TextViewer">TextViewer</a>)」、「<b>エディタで開く</b> (<a
-          href="hid00005.htm#FileEdit">FileEdit</a>)」、「<b>バイナリエディタで開く</b> (<a
-          href="hid00005.htm#BinaryEdit">BinaryEdit</a>)」、「<b>コマンドファイルとして実行</b> (<a
-          href="hid00005.htm#ExeCommands">ExeCommands</a>)」、「<b>指定コマンドを実行</b> (<a
-          href="hid00005.htm#ExeCommands">ExeCommands</a>_)」のいずれかを選べます。<br>
+        コマンドは、「<b>Windowsの関連付けで開く</b> (<a href="hid00005.htm#OpenByWin">OpenByWin</a>)」、「<b>独自の関連付けで開く</b> (<a href="hid00005.htm#OpenByApp">OpenByApp</a>)」、「<b>テキストビューアで開く</b> (<a href="hid00005.htm#TextViewer">TextViewer</a>)」、「<b>エディタで開く</b> (<a href="hid00005.htm#FileEdit">FileEdit</a>)」、「<b>バイナリエディタで開く</b> (<a href="hid00005.htm#BinaryEdit">BinaryEdit</a>)」、「<b>コマンドファイルとして実行</b> (<a href="hid00005.htm#ExeCommands">ExeCommands</a>)」、「<b>指定コマンドを実行</b> (<a href="hid00005.htm#ExeCommands">ExeCommands</a>_)」のいずれかを選べます。<br>
         対象拡張子は、<b>.</b> (ピリオド)で区切って複数指定できます。<br>
         「<b>指定コマンドを実行</b> (ExeCommands_)」の場合は、 パラメータに実行するコマンドを指定してください(<b>:</b> (コロン)で区切って複数指定可)。先頭が <b>@</b>
         の場合、<b>コマンドファイル</b>名になります(<span class="btn_frame">...</span>ボタンで参照可能)。<br>
-        指定がよければ<span class="btn_frame">追加</span>ボタンを押してください。一覧で選択されている項目の内容を変更したい場合は<span
-          class="btn_frame">変更</span>ボタンを、削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。また<span
-          class="btn_frame">↑</span>/<span class="btn_frame">↓</span>ボタンで項目を上下に移動できます。一覧にフォーカスがある場合は、 <span
-          class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span
-          class="btn_frame">↓</span>キーで項目の上下移動、<span
-          class="btn_frame">DEL</span>キーで削除が可能です。なお、項目の移動はドラッグ＆ドロップでもできます(上下端で自動スクロール)。
+        指定がよければ<span class="btn_frame">追加</span>ボタンを押してください。一覧で選択されている項目の内容を変更したい場合は<span class="btn_frame">変更</span>ボタンを、削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。また<span class="btn_frame">↑</span>/<span class="btn_frame">↓</span>ボタンで項目を上下に移動できます。一覧にフォーカスがある場合は、 <span class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span class="btn_frame">↓</span>キーで項目の上下移動、<span class="btn_frame">DEL</span>キーで削除が可能です。なお、項目の移動はドラッグ＆ドロップでもできます(上下端で自動スクロール)。
       </div>
       <br>
 
       <img src="chkbox.png" alt=""> <b>タブグループ</b><br>
       <div class="indent1">
-        カーソル位置がタブグループ・ファイル(通常のINIファイル以外の [TabList] セクションを持つ .INI ファイル)の場合、<a
-          href="hid00005.htm#LoadTabGroup">LoadTabGroup</a> コマンドで開きます。
+        カーソル位置がタブグループ・ファイル(通常のINIファイル以外の [TabList] セクションを持つ .INI ファイル)の場合、<a href="hid00005.htm#LoadTabGroup">LoadTabGroup</a> コマンドで開きます。
       </div>
       <img src="chkbox.png" alt=""> <b>メニュー定義</b><br>
       <div class="indent1">
