--- a/help/src/hid00021.htm
+++ b/help/src/hid00021.htm
@@ -30,8 +30,7 @@
     (コロン)で区切って複数指定できます。<br>
     先頭が <b>@</b> の場合、<b>コマンドファイル</b>の指定になります。なお、右クリックメニューで「<b>コマンド名の参照</b>」が可能です(<a href="hid00005.htm#CopyCmdName">→
       CopyCmdName</a>)。<br>
-    先頭 <b>$</b> の場合、<a href="hid00014.htm">追加メニュー</a>または<a
-      href="hid00015.htm">外部ツール</a>で設定されている<b>エイリアス</b>とみなし、その項目を実行します(サブメニューの親項目の場合は、そのサブメニューをポップアップ表示)。<br>
+    先頭 <b>$</b> の場合、<a href="hid00014.htm">追加メニュー</a>または<a href="hid00015.htm">外部ツール</a>で設定されている<b>エイリアス</b>とみなし、その項目を実行します(サブメニューの親項目の場合は、そのサブメニューをポップアップ表示)。<br>
     なお、先頭に <b>;</b> (セミコロン)を挿入すると、そのコマンド設定を無効にできます。<br>
   </p>
 
@@ -40,15 +39,10 @@
   </p>
 
   <p>
-    <span class="btn_frame">...</span>ボタンを押すと<a href="hid00067.htm">コマンドファイル一覧</a>(選択)画面が表示され、ファイルを参照できます。また、コマンド欄が <a
-      href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>, <a href="hid00005.htm#FileEdit">FileEdit</a>、<a
-      href="hid00005.htm#LoadWorkList">LoadWorkList</a>、<a href="hid00005.htm#OpenByApp">OpenByApp</a>、<a
-      href="hid00005.htm#OpenByWin">OpenByWin</a>、<a href="hid00005.htm#TextViewer">TextViewer</a>
+    <span class="btn_frame">...</span>ボタンを押すと<a href="hid00067.htm">コマンドファイル一覧</a>(選択)画面が表示され、ファイルを参照できます。また、コマンド欄が <a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>, <a href="hid00005.htm#FileEdit">FileEdit</a>、<a href="hid00005.htm#LoadWorkList">LoadWorkList</a>、<a href="hid00005.htm#OpenByApp">OpenByApp</a>、<a href="hid00005.htm#OpenByWin">OpenByWin</a>、<a href="hid00005.htm#TextViewer">TextViewer</a>
     で始まる場合は、通常のファイル選択が出ます。<br>
-    <b>コマンドファイル</b>や、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>_ で始まる<b>メニュー定義ファイル</b>を指定した場合、<span
-      class="btn_frame">ファイル編集</span>ボタンを押すと、テキストエディタでそのファイルを開けます。<br>
-    <b>コマンドファイル</b>や、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>、<a
-      href="hid00005.htm#LoadWorkList">LoadWorkList</a> コマンドの対象ファイルは、<b>NyanFi</b> ディレクトリからの相対指定が可能です。
+    <b>コマンドファイル</b>や、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>_ で始まる<b>メニュー定義ファイル</b>を指定した場合、<span class="btn_frame">ファイル編集</span>ボタンを押すと、テキストエディタでそのファイルを開けます。<br>
+    <b>コマンドファイル</b>や、<a href="hid00005.htm#ExeMenuFile">ExeMenuFile</a>、<a href="hid00005.htm#LoadWorkList">LoadWorkList</a> コマンドの対象ファイルは、<b>NyanFi</b> ディレクトリからの相対指定が可能です。
   </p>
 
   <p>
@@ -56,17 +50,12 @@
   </p>
 
   <p>
-    <b>検索</b> <img src="edit.png" alt=""> 欄に文字列を入力して<span class="btn_frame">∨</span>/<span
-      class="btn_frame">∧</span>ボタン(or <span class="btn_frame">↓</span>/<span
-      class="btn_frame">↑</span>キー)を押すと一覧の内容を検索できます。<br>
+    <b>検索</b> <img src="edit.png" alt=""> 欄に文字列を入力して<span class="btn_frame">∨</span>/<span class="btn_frame">∧</span>ボタン(or <span class="btn_frame">↓</span>/<span class="btn_frame">↑</span>キー)を押すと一覧の内容を検索できます。<br>
   </p>
 
   <p>
     他の <b>ExeCommands</b> コマンド実行中にイベントが発生した場合、コマンドは実行されません。<br>
-    ただし、<b>ExeCommands</b> コマンドの最後(<b>Exit</b> は除く)で <a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a
-      href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a
-      href="hid00005.htm#FindHardLink">FindHardLink</a>、<a href="hid00005.htm#FindMark">FindMark</a>、<a
-      href="hid00005.htm#FindTag">FindTag</a>、<a href="hid00005.htm#MaskFind">MaskFind</a>
+    ただし、<b>ExeCommands</b> コマンドの最後(<b>Exit</b> は除く)で <a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a href="hid00005.htm#FindHardLink">FindHardLink</a>、<a href="hid00005.htm#FindMark">FindMark</a>、<a href="hid00005.htm#FindTag">FindTag</a>、<a href="hid00005.htm#MaskFind">MaskFind</a>
     コマンドが実行されて結果リストが表示された場合には、「<b>検索結果リストが表示された直後(FL)</b>」イベントのコマンドが実行されます。
   </p>
 
@@ -122,10 +111,7 @@
     <dd>ファイラーのカレント側で、仮想ディレクトリを閉じて通常のファイルリストに戻った直後に実行されます。</dd>
 
     <dt class="no_bg_indent1">検索結果リストが表示された直後(FL)</dt>
-    <dd>ファイラーで、各種検索(<a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a
-        href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a
-        href="hid00005.htm#FindHardLink">FindHardLink</a>、<a href="hid00005.htm#FindMark">FindMark</a>、<a
-        href="hid00005.htm#FindTag">FindTag</a>、<a href="hid00005.htm#MaskFind">MaskFind</a>)の結果リストが表示された直後に実行されます。<br>
+    <dd>ファイラーで、各種検索(<a href="hid00005.htm#FindFileDlg">FindFileDlg</a>、<a href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a>、<a href="hid00005.htm#FindDirDlg">FindDirDlg</a>、<a href="hid00005.htm#FindHardLink">FindHardLink</a>、<a href="hid00005.htm#FindMark">FindMark</a>、<a href="hid00005.htm#FindTag">FindTag</a>、<a href="hid00005.htm#MaskFind">MaskFind</a>)の結果リストが表示された直後に実行されます。<br>
     </dd>
 
     <dt class="no_bg_indent1">ファイルリストでカーソル移動直後(FL)</dt>
@@ -382,8 +368,7 @@ AppendBuffer_%ExePath%CLIPMEMO.TXT
       <br>
       <b>hh:mm[:ss]</b> の書式だと時刻指定になります。<b>,</b> (カンマ)で区切って最大6つまで時刻を指定できます。<br>
       先頭(時)が "??:" の場合、毎時の設定になります。また、設定時刻を過ぎると、翌日の時刻として再設定されます。<br>
-      <b>例</b>: <span class="inp_box">09:30,12:00,17:45</span> <span
-        class="inp_box">PlaySound_アラーム.wav</span>　9:30、12:00、17:45 にアラーム音を鳴らす<br>
+      <b>例</b>: <span class="inp_box">09:30,12:00,17:45</span> <span class="inp_box">PlaySound_アラーム.wav</span>　9:30、12:00、17:45 にアラーム音を鳴らす<br>
       <b>例</b>: <span class="inp_box">??:00,17:30</span> <span class="inp_box">PlaySound_アラーム.wav</span>　毎正時と17:30
       にアラーム音を鳴らす<br>
     </dd>
