--- a/help/src/hid00024.htm
+++ b/help/src/hid00024.htm
@@ -6,27 +6,27 @@
   <title>オプション設定 - 一般2</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value=".nyanfi">
-	<param name="Keyword" value="7z.dll">
-	<param name="Keyword" value="7-zip64.dll">
-	<param name="Keyword" value="Git for Windows">
-	<param name="Keyword" value="git.exe">
-	<param name="Keyword" value="grep.exe">
-	<param name="Keyword" value="NTFS">
-	<param name="Keyword" value="OpenStandard">
-	<param name="Keyword" value="ShowFileInfo">
-	<param name="Keyword" value="ShowPreview">
-	<param name="Keyword" value="thumbnail.jpg">
-	<param name="Keyword" value="Zone.Identifier">
-	<param name="Keyword" value="イメージプレビュー">
-	<param name="Keyword" value="タスク">
-	<param name="Keyword" value="タスクトレイ">
-	<param name="Keyword" value="テキストプレビュー">
-	<param name="Keyword" value="ファイル情報">
-	<param name="Keyword" value="ログ">
-	<param name="Keyword" value="一般2">
-	<param name="Keyword" value="呼び出しホットキー">
-	<param name="Keyword" value="代替データストリーム">
+    <param name="Keyword" value=".nyanfi">
+    <param name="Keyword" value="7z.dll">
+    <param name="Keyword" value="7-zip64.dll">
+    <param name="Keyword" value="Git for Windows">
+    <param name="Keyword" value="git.exe">
+    <param name="Keyword" value="grep.exe">
+    <param name="Keyword" value="NTFS">
+    <param name="Keyword" value="OpenStandard">
+    <param name="Keyword" value="ShowFileInfo">
+    <param name="Keyword" value="ShowPreview">
+    <param name="Keyword" value="thumbnail.jpg">
+    <param name="Keyword" value="Zone.Identifier">
+    <param name="Keyword" value="イメージプレビュー">
+    <param name="Keyword" value="タスク">
+    <param name="Keyword" value="タスクトレイ">
+    <param name="Keyword" value="テキストプレビュー">
+    <param name="Keyword" value="ファイル情報">
+    <param name="Keyword" value="ログ">
+    <param name="Keyword" value="一般2">
+    <param name="Keyword" value="呼び出しホットキー">
+    <param name="Keyword" value="代替データストリーム">
   </object>
 </head>
 
@@ -34,8 +34,7 @@
   <h1>オプション設定 - 一般2</h1>
 
   <p class="link_box">
-    <a href="#FileInfo">ファイル情報</a> ／ <a href="#ImagePreview">イメージプレビュー</a> ／ <a href="#TextPreview">テキストプレビュー</a> ／ <a
-      href="#Log">ログ</a> ／ <a href="#NyanfiHotKey">NyanFi 呼び出しホットキー</a> ／ <a href="#DialogKey">キーによるダイアログの移動/サイズ変更</a> ／
+    <a href="#FileInfo">ファイル情報</a> ／ <a href="#ImagePreview">イメージプレビュー</a> ／ <a href="#TextPreview">テキストプレビュー</a> ／ <a href="#Log">ログ</a> ／ <a href="#NyanfiHotKey">NyanFi 呼び出しホットキー</a> ／ <a href="#DialogKey">キーによるダイアログの移動/サイズ変更</a> ／
     <a href="#Keyboard">キーボードの種類</a> ／ <a href="#Sound">サウンド再生</a> ／ <a href="#Other">その他</a>
   </p>
   <br>
@@ -166,8 +165,7 @@
     <dd></dd>
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 有効</dt>
     <dd>ファイル情報が取得されていて、テキストファイルの場合、プレビュー表示を行います。<br>
-      ファイル情報が非表示(<a href="hid00005.htm#ShowProperty">ShowProperty</a>_OFF)でも、プレビューが表示(<a
-        href="hid00005.htm#ShowPreview">ShowPreview</a>_ON)の場合、テキストと思われる拡張子のファイルについては、(ファイル情報を取得して)プレビュー表示を試みます。
+      ファイル情報が非表示(<a href="hid00005.htm#ShowProperty">ShowProperty</a>_OFF)でも、プレビューが表示(<a href="hid00005.htm#ShowPreview">ShowPreview</a>_ON)の場合、テキストと思われる拡張子のファイルについては、(ファイル情報を取得して)プレビュー表示を試みます。
     </dd>
 
     <dt class="no_bg_indent1">最大行数 <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 1000)</span></dt>
@@ -252,17 +250,13 @@
 
     <dt id="NyanfiHotKey"><img src="grpbox.png" alt=""> NyanFi 呼び出しホットキー</dt>
     <dd><b>NyanFi</b> を呼び出すホットキーを設定します。ホットキーを押すと、ウィンドウがアクティブ(最小化されていたら元の大きさに戻す)になります。<br>
-      ホットキーは、<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span
-        class="btn_frame">Alt</span><span class="btn_frame">Win</span>とキーとの組み合わせで指定してださい。それ以外の場合は、ホットキーの登録が解除されます。<br>
+      ホットキーは、<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span class="btn_frame">Alt</span><span class="btn_frame">Win</span>とキーとの組み合わせで指定してださい。それ以外の場合は、ホットキーの登録が解除されます。<br>
       なお、<b>NyanFi</b> を<a href="hid00017.htm#Duplicate">二重起動</a>している場合は、最初に起動した <b>NyanFi</b> が呼び出されます。<br>
       <br>
     </dd>
 
     <dt id="DialogKey"><img src="grpbox.png" alt=""> キーによるダイアログの移動/サイズ変更</dt>
-    <dd>指定した<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span
-        class="btn_frame">Alt</span>の組み合わせと<span class="btn_frame">↑</span><span class="btn_frame">↓</span><span
-        class="btn_frame">←</span><span
-        class="btn_frame">→</span>キーによって、各種ダイアログ(設定用は除く)を移動したり、サイズを変更(可能な場合)したりできます。また、移動、サイズ変更のそれぞれについて、一回の変化量も指定可能です。<br>
+    <dd>指定した<span class="btn_frame">Shift</span><span class="btn_frame">Ctrl</span><span class="btn_frame">Alt</span>の組み合わせと<span class="btn_frame">↑</span><span class="btn_frame">↓</span><span class="btn_frame">←</span><span class="btn_frame">→</span>キーによって、各種ダイアログ(設定用は除く)を移動したり、サイズを変更(可能な場合)したりできます。また、移動、サイズ変更のそれぞれについて、一回の変化量も指定可能です。<br>
       修飾キーを何も指定しないと無効になります。<br>
       <br>
     </dd>
@@ -278,8 +272,7 @@
     <dt id="Sound"><img src="grpbox.png" alt=""> サウンド再生</dt>
     <dd></dd>
     <dt class="no_bg_indent1">再生制限 <img src="edit.png" alt="">　<span class="def_text">(デフォルト: 3秒)</span></dt>
-    <dd><b>.wav</b>、<b>.wma</b>、<b>.mp3</b>、<b>.mid</b> ファイル上で<span class="btn_frame">ENTER</span>キーを押したとき(<a
-        href="hid00005.htm#OpenStandard">OpenStandard</a>)、ここで指定した秒数までで再生します。<br>
+    <dd><b>.wav</b>、<b>.wma</b>、<b>.mp3</b>、<b>.mid</b> ファイル上で<span class="btn_frame">ENTER</span>キーを押したとき(<a href="hid00005.htm#OpenStandard">OpenStandard</a>)、ここで指定した秒数までで再生します。<br>
       <br>
     </dd>
 
@@ -288,8 +281,7 @@
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 最小化時にアイコンを通知領域に格納</dt>
     <dd>最小化したときに、アイコンをタスクバーの通知領域に格納します。<br>
       格納されたアイコンをクリックすると、最初に起動した <b>NyanFi</b> がアクティブになります。<br>
-      アイコンの右クリックメニューでは、<a href="hid00017.htm#Duplicate">二重起動</a>された <b>NyanFi</b> を選んでアクティブ化したり、二重起動(<a
-        href="hid00005.htm#Duplicate">Duplicate</a>)、再起動(<a href="hid00005.htm#Restart">Restart</a>)などが可能。<br>
+      アイコンの右クリックメニューでは、<a href="hid00017.htm#Duplicate">二重起動</a>された <b>NyanFi</b> を選んでアクティブ化したり、二重起動(<a href="hid00005.htm#Duplicate">Duplicate</a>)、再起動(<a href="hid00005.htm#Restart">Restart</a>)などが可能。<br>
       なお、右クリックメニューで終了したり、最初に起動した <b>NyanFi</b> を終了したりすると、すべての <b>NyanFi</b> が終了します。<br>
       <br>
     </dd>
@@ -335,13 +327,13 @@
       <a href="hid00090.htm">→ Git の利用について</a>
     </dd>
     <dt class="no_bg_indent1">grep.exe <img src="edit.png" alt="">　<span class="def_text">(デフォルト:
-      自動検出)</span></dt>
-      <dd>
-        <a href="hid00005.htm#Grep2">Grep2</a> コマンドによる<a href="hid00056.htm">文字列検索(GREP)</a>で使用します。<br>
-        Git for Windows インストール時に一緒にインストールされます。自動検出されない場合は手動で設定してください。<br>
-        なお <b>GnuWin32</b> のものだと、うまく動作しないようです。
-      </dd>
-    </dl>
+        自動検出)</span></dt>
+    <dd>
+      <a href="hid00005.htm#Grep2">Grep2</a> コマンドによる<a href="hid00056.htm">文字列検索(GREP)</a>で使用します。<br>
+      Git for Windows インストール時に一緒にインストールされます。自動検出されない場合は手動で設定してください。<br>
+      なお <b>GnuWin32</b> のものだと、うまく動作しないようです。
+    </dd>
+  </dl>
   <br><br>
 
 </body>
