--- a/help/src/hid00052.htm
+++ b/help/src/hid00052.htm
@@ -6,32 +6,32 @@
   <title>ファイル(/ディレクトリ)名検索ダイアログ</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="CurrToOpp">
-	<param name="Keyword" value="Exif情報">
-	<param name="Keyword" value="FindFileDirDlg">
-	<param name="Keyword" value="FindFileDlg">
-	<param name="Keyword" value="FLAC">
-	<param name="Keyword" value="GPS情報">
-	<param name="Keyword" value="ID3タグ">
-	<param name="Keyword" value="LoadFindSet">
-	<param name="Keyword" value="MP3">
-	<param name="Keyword" value="NTFS">
-	<param name="Keyword" value="OpenStandard">
-	<param name="Keyword" value="SaveAsFindSet">
-	<param name="Keyword" value="WAV">
-	<param name="Keyword" value="xd2txlib.dll">
-	<param name="Keyword" value="コードページ">
-	<param name="Keyword" value="タグ">
-	<param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
-	<param name="Keyword" value="ファイル名検索ダイアログ">
-	<param name="Keyword" value="ライブラリファイル">
-	<param name="Keyword" value="リストファイル">
-	<param name="Keyword" value="改行コード">
-	<param name="Keyword" value="拡張検索">
-	<param name="Keyword" value="検索設定ファイル">
-	<param name="Keyword" value="正規表現">
-	<param name="Keyword" value="正規表現チェッカー">
-	<param name="Keyword" value="代替データストリーム">
+    <param name="Keyword" value="CurrToOpp">
+    <param name="Keyword" value="Exif情報">
+    <param name="Keyword" value="FindFileDirDlg">
+    <param name="Keyword" value="FindFileDlg">
+    <param name="Keyword" value="FLAC">
+    <param name="Keyword" value="GPS情報">
+    <param name="Keyword" value="ID3タグ">
+    <param name="Keyword" value="LoadFindSet">
+    <param name="Keyword" value="MP3">
+    <param name="Keyword" value="NTFS">
+    <param name="Keyword" value="OpenStandard">
+    <param name="Keyword" value="SaveAsFindSet">
+    <param name="Keyword" value="WAV">
+    <param name="Keyword" value="xd2txlib.dll">
+    <param name="Keyword" value="コードページ">
+    <param name="Keyword" value="タグ">
+    <param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
+    <param name="Keyword" value="ファイル名検索ダイアログ">
+    <param name="Keyword" value="ライブラリファイル">
+    <param name="Keyword" value="リストファイル">
+    <param name="Keyword" value="改行コード">
+    <param name="Keyword" value="拡張検索">
+    <param name="Keyword" value="検索設定ファイル">
+    <param name="Keyword" value="正規表現">
+    <param name="Keyword" value="正規表現チェッカー">
+    <param name="Keyword" value="代替データストリーム">
   </object>
 </head>
 
@@ -50,8 +50,7 @@
   <p>
     結果リストで <a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a> コマンドを実行すると、現在の検索設定に名前を付けて保存できます。<br>
     保存した<b>検索設定ファイル</b>は、<a href="hid00005.htm#LoadFindSet">LoadFindSet</a> コマンドで読み込んで検索を実行できます(ダイアログは非表示)。<br>
-    また <a href="hid00019.htm#OpenStandard">オプション設定 - コマンド - OpenStandard</a> で「<b>検索設定</b>」をチェックしていると、<a
-        href="hid00005.htm#OpenStandard">OpenStandard</a> コマンドでも実行できます。<br>
+    また <a href="hid00019.htm#OpenStandard">オプション設定 - コマンド - OpenStandard</a> で「<b>検索設定</b>」をチェックしていると、<a href="hid00005.htm#OpenStandard">OpenStandard</a> コマンドでも実行できます。<br>
   </p>
 
   <hr class="light">
@@ -83,9 +82,7 @@
 
     <dt><img src="grpbox.png" alt=""> 更新日付</dt>
     <dd>
-      <span class="btn_frame">本日</span>ボタンを押すと、今日の日付が設定されます。また<span
-        class="btn_frame">-1D</span>ボタンでは現在設定されている日付に対して相対的に1日前、また<span class="btn_frame">-7D</span>ボタンでは7日前、<span
-        class="btn_frame">-1M</span>ボタンでは1月前、<span class="btn_frame">-1Y</span>ボタンでは1年前に変更します。<br>
+      <span class="btn_frame">本日</span>ボタンを押すと、今日の日付が設定されます。また<span class="btn_frame">-1D</span>ボタンでは現在設定されている日付に対して相対的に1日前、また<span class="btn_frame">-7D</span>ボタンでは7日前、<span class="btn_frame">-1M</span>ボタンでは1月前、<span class="btn_frame">-1Y</span>ボタンでは1年前に変更します。<br>
       条件が「<b>以前</b>」の場合、設定されている日付を含めて、それより古いファイルがマッチします。<br>
       条件が「<b>以降</b>」の場合、設定されている日付を含めて、それより新しいファイルがマッチします。<br>
       条件が「<b>一致</b>」の場合、日付の設定にワイルドカード <b>?</b> を使えます。<br>
@@ -159,8 +156,7 @@
       <br>
     </dd>
 
-    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> アーカイブ内も検索 <span
-        style="font-weight: normal;">(ファイル名検索のみ)</span></dt>
+    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> アーカイブ内も検索 <span style="font-weight: normal;">(ファイル名検索のみ)</span></dt>
     <dd>
       チェックすると、アーカイブ内のファイルも検索対象になります。拡張検索はできません。<br>
       なおコマンドに <b>A0</b>/<b>A1</b> パラメータを指定することで、チェック状態を事前に設定しておくこともできます。<br>
@@ -173,11 +169,9 @@
       チェックしていない場合でも、<a href="hid00005.htm#CurrToOpp">CurrToOpp</a> コマンドを実行すると、個々に同様の動作が可能です。
     </dd>
 
-    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> ディレクトリ名を反映 <span
-        style="font-weight: normal;">(ファイル/ディレクトリ名検索のみ)</span></dt>
+    <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> ディレクトリ名を反映 <span style="font-weight: normal;">(ファイル/ディレクトリ名検索のみ)</span></dt>
     <dd>
-      「<b>結果リストから反対側へ反映</b>」がチェックされていて、カーソル位置がディレクトリ名の場合、反対パスをその親ディレクトリに変更し、その中の当該ディレクトリに点線カーソルを表示します(ファイル名と同じ扱い)。<a
-        href="hid00005.htm#CurrToOpp">CurrToOpp</a> コマンドを実行した場合も同様になります。<br>
+      「<b>結果リストから反対側へ反映</b>」がチェックされていて、カーソル位置がディレクトリ名の場合、反対パスをその親ディレクトリに変更し、その中の当該ディレクトリに点線カーソルを表示します(ファイル名と同じ扱い)。<a href="hid00005.htm#CurrToOpp">CurrToOpp</a> コマンドを実行した場合も同様になります。<br>
       <br>
     </dd>
   </dl>
@@ -188,13 +182,9 @@
   </p>
 
   <p>
-    検索中にファイル(/ディレクトリ)が見つかるとカレント側に表示されていきます。また、ステータスバー(非表示の場合は<a
-      href="hid00004.htm#DriveInfo">ドライブ情報</a>部分)には検索状況が表示されます。括弧内の数字はヒット数です。<br>
+    検索中にファイル(/ディレクトリ)が見つかるとカレント側に表示されていきます。また、ステータスバー(非表示の場合は<a href="hid00004.htm#DriveInfo">ドライブ情報</a>部分)には検索状況が表示されます。括弧内の数字はヒット数です。<br>
     検索を中断したい場合は<span class="btn_frame">ESC</span>キーを押してください。<br>
-    検索中は、カーソル移動および <a href="hid00005.htm#BinaryEdit">BinaryEdit</a>、<a href="hid00005.htm#FileEdit">FileEdit</a>、<a
-      href="hid00005.htm#OpenByApp">OpenByApp</a>、<a href="hid00005.htm#OpenByWin">OpenByWin</a>、<a
-      href="hid00005.htm#OpenStandard">OpenStandard</a>、<a href="hid00005.htm#Select">Select</a>、<a
-      href="hid00005.htm#CurrToOpp">CurrToOpp</a> コマンドのみ受け付けます。なお <a href="hid00005.htm#OpenStandard">OpenStandard</a>
+    検索中は、カーソル移動および <a href="hid00005.htm#BinaryEdit">BinaryEdit</a>、<a href="hid00005.htm#FileEdit">FileEdit</a>、<a href="hid00005.htm#OpenByApp">OpenByApp</a>、<a href="hid00005.htm#OpenByWin">OpenByWin</a>、<a href="hid00005.htm#OpenStandard">OpenStandard</a>、<a href="hid00005.htm#Select">Select</a>、<a href="hid00005.htm#CurrToOpp">CurrToOpp</a> コマンドのみ受け付けます。なお <a href="hid00005.htm#OpenStandard">OpenStandard</a>
     については、対象拡張子が <b>OpenByApp</b>、<b>OpenByWin</b>、<b>FileEdit</b>、<b>BinaryEdit</b> コマンドに関連付けられている場合、および
     WAVのファイルの再生、実行可能ファイルの実行のみ可能です。またメインメニュー、ツールバー、イベント、ログウィンドウでのコマンドはすべて無効になります。<br>
   </p>
@@ -206,15 +196,12 @@
     をチェックしていると、結果リストに「<b>場所</b>」列が表示され、パス付きファイル名に基づくソートが行われます。<br>
   </p>
   <p>
-    項目上で<span class="btn_frame">ENTER</span>キーを押すと、結果リストから抜けて、そのファイルのある位置に移動します。ただし、<a
-      href="hid00019.htm#OpenStandard">オプション設定 - コマンド</a> - <b>OpenStandard</b> 「<b>検索結果リストでも通常動作</b>」がチェックされていると <a
-      href="hid00005.htm#OpenStandard">OpenStandard</a> と同じ動作になります(アーカイブ内ファイルは除く)。<br>
+    項目上で<span class="btn_frame">ENTER</span>キーを押すと、結果リストから抜けて、そのファイルのある位置に移動します。ただし、<a href="hid00019.htm#OpenStandard">オプション設定 - コマンド</a> - <b>OpenStandard</b> 「<b>検索結果リストでも通常動作</b>」がチェックされていると <a href="hid00005.htm#OpenStandard">OpenStandard</a> と同じ動作になります(アーカイブ内ファイルは除く)。<br>
     その他、ファイル操作なども可能です。なお、アーカイブ内ファイルに対するファイル操作はできません(プレビュー、閲覧、編集、再生などは可能)。
   </p>
 
   <p>
-    通常のファイルリスト表示に戻るには、<span class="btn_frame">ESC</span>キーを押すか、"<b>..</b>" で<span
-      class="btn_frame">ENTER</span>キーを押してください。<br>
+    通常のファイルリスト表示に戻るには、<span class="btn_frame">ESC</span>キーを押すか、"<b>..</b>" で<span class="btn_frame">ENTER</span>キーを押してください。<br>
     <a href="hid00005.htm#ReturnList">ReturnList</a> コマンドや <a href="hid00005.htm#ToParent">ToParent</a> コマンドでも戻れます。<br>
     なお、<span class="btn_frame">ESC</span>キーに <a href="hid00005.htm#ExeCommands">ExeCommands</a>
     コマンドが割り当てられている場合は、それが優先的に実行されます。
