--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -26,10 +26,12 @@
     カレントで選択項目がある場合は、それらが対象となります。また非表示の項目は対象から外されます。<br>
   </p>
   <p>
-    結果リストでは、文字列検索の場合と同様に、カーソル移動やファイル編集などが可能です。<br>
+    <b>結果リスト</b>では、文字列検索の場合と同様に、カーソル移動やファイル編集などが可能です。<br>
     置換された部分の背景は、強調色の補色で表示されます。<br>
-    なお、結果リストの行番号は置換前のものですので、置換文字列に改行が含まれていると、置換後の行とはずれていきます。
+    また文字列検索の場合と同様に、<span class="btn_frame">F5</span>キーを押すと、ファイル毎の<b>置換数一覧</b>に切り替わります(表示メニューからも切り替え可能)。<br>
+    なお、結果リストの行番号は置換前のものですので、置換文字列に改行が含まれていると、置換後の行とはずれていきます。<br>
   </p>
+
   <hr class="light">
 
   <dl>
