--- a/help/src/hid00100.htm
+++ b/help/src/hid00100.htm
@@ -34,19 +34,14 @@
   <h1>コマンドの索引(アルファベット順)</h1>
 
   <p class="link_box">
-    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a
-      href="#IV">イメージビューア</a> ／ <a href="#LW">ログウィンドウ</a><br>
+    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a href="#IV">イメージビューア</a> ／ <a href="#LW">ログウィンドウ</a><br>
     　　<a href="hid00101.htm">→ 機能順索引</a> ／ 　<a href="hid00063.htm">→ ExeCommands コマンド</a>
   </p>
   <br>
 
   <h2 id="FL">ファイラー</h2>
   <p class="link_box">
-    <a href="#f_A">A</a> <a href="#f_B">B</a> <a href="#f_C">C</a> <a href="#f_D">D</a> <a href="#f_E">E</a> <a
-      href="#f_F">F</a> <a href="#f_G">G</a> <a href="#f_H">H</a> <a href="#f_I">I</a> <a href="#f_J">J</a> <a
-      href="#f_K">K</a> <a href="#f_L">L</a> <a href="#f_M">M</a> <a href="#f_N">N</a> <a href="#f_O">O</a> <a
-      href="#f_P">P</a> <a href="#f_R">R</a> <a href="#f_S">S</a> <a href="#f_T">T</a> <a href="#f_U">U</a> <a
-      href="#f_V">V</a> <a href="#f_W">W</a> <a href="#f_X">X</a> <a href="#f_Z">Z</a>
+    <a href="#f_A">A</a> <a href="#f_B">B</a> <a href="#f_C">C</a> <a href="#f_D">D</a> <a href="#f_E">E</a> <a href="#f_F">F</a> <a href="#f_G">G</a> <a href="#f_H">H</a> <a href="#f_I">I</a> <a href="#f_J">J</a> <a href="#f_K">K</a> <a href="#f_L">L</a> <a href="#f_M">M</a> <a href="#f_N">N</a> <a href="#f_O">O</a> <a href="#f_P">P</a> <a href="#f_R">R</a> <a href="#f_S">S</a> <a href="#f_T">T</a> <a href="#f_U">U</a> <a href="#f_V">V</a> <a href="#f_W">W</a> <a href="#f_X">X</a> <a href="#f_Z">Z</a>
   </p>
 
   <table cellspacing="0">
@@ -1946,11 +1941,7 @@
 
   <h2 id="TV">テキストビューア</h2>
   <p class="link_box">
-    <a href="#v_A">A</a> <a href="#v_B">B</a> <a href="#v_C">C</a> <a href="#v_D">D</a> <a href="#v_E">E</a> <a
-      href="#v_F">F</a> <a href="#v_G">G</a> <a href="#v_H">H</a> <a href="#v_I">I</a> <a href="#v_J">J</a> <a
-      href="#v_K">K</a> <a href="#v_L">L</a> <a href="#v_M">M</a> <a href="#v_N">N</a> <a href="#v_O">O</a> <a
-      href="#v_P">P</a> <a href="#v_R">R</a> <a href="#v_S">S</a> <a href="#v_T">T</a> <a href="#v_U">U</a> <a
-      href="#v_V">V</a> <a href="#v_W">W</a> <a href="#v_Z">Z</a>
+    <a href="#v_A">A</a> <a href="#v_B">B</a> <a href="#v_C">C</a> <a href="#v_D">D</a> <a href="#v_E">E</a> <a href="#v_F">F</a> <a href="#v_G">G</a> <a href="#v_H">H</a> <a href="#v_I">I</a> <a href="#v_J">J</a> <a href="#v_K">K</a> <a href="#v_L">L</a> <a href="#v_M">M</a> <a href="#v_N">N</a> <a href="#v_O">O</a> <a href="#v_P">P</a> <a href="#v_R">R</a> <a href="#v_S">S</a> <a href="#v_T">T</a> <a href="#v_U">U</a> <a href="#v_V">V</a> <a href="#v_W">W</a> <a href="#v_Z">Z</a>
   </p>
 
   <table cellspacing="0">
@@ -2657,10 +2648,7 @@
 
   <h2 id="IV">イメージビューア</h2>
   <p class="link_box">
-    <a href="#i_A">A</a> <a href="#i_C">C</a> <a href="#i_D">D</a> <a href="#i_E">E</a> <a href="#i_F">F</a> <a
-      href="#i_G">G</a> <a href="#i_H">H</a> <a href="#i_I">I</a> <a href="#i_J">J</a> <a href="#i_K">K</a> <a
-      href="#i_L">L</a> <a href="#i_M">M</a> <a href="#i_N">N</a> <a href="#i_O">O</a> <a href="#i_P">P</a> <a
-      href="#i_R">R</a> <a href="#i_S">S</a> <a href="#i_T">T</a> <a href="#i_W">W</a> <a href="#i_Z">Z</a>
+    <a href="#i_A">A</a> <a href="#i_C">C</a> <a href="#i_D">D</a> <a href="#i_E">E</a> <a href="#i_F">F</a> <a href="#i_G">G</a> <a href="#i_H">H</a> <a href="#i_I">I</a> <a href="#i_J">J</a> <a href="#i_K">K</a> <a href="#i_L">L</a> <a href="#i_M">M</a> <a href="#i_N">N</a> <a href="#i_O">O</a> <a href="#i_P">P</a> <a href="#i_R">R</a> <a href="#i_S">S</a> <a href="#i_T">T</a> <a href="#i_W">W</a> <a href="#i_Z">Z</a>
   </p>
 
   <table cellspacing="0">
