--- a/help/src/hid00101.htm
+++ b/help/src/hid00101.htm
@@ -37,8 +37,7 @@
   <h1>コマンドの索引(機能別)</h1>
 
   <p class="link_box">
-    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a
-      href="#IV">イメージビューア</a><br>
+    <a href="#FL">ファイラー</a> (<a href="#IS"><small>インクリメンタルサーチ</small></a>) ／ <a href="#TV">テキストビューア</a> ／ <a href="#IV">イメージビューア</a><br>
     　　<a href="hid00100.htm">→ アルファベット順索引</a> ／ 　<a href="hid00063.htm">→ ExeCommands コマンド</a>
   </p>
   <p>コマンドによっては、複数の項目に分類されている場合があります。</p>
