--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,6 +37,13 @@
   </div>
 
   <dl>
+    <dt>V16.18 <span class="ver_date">(2024-01-16)</span></dt>
+    <dd>
+      ・文字列検索(GREP)で、ファイル毎のマッチ数一覧を表示できるようにしました。表示メニューまたはF5キーで結果リスト/マッチ数一覧を切り替えられます。マッチ数一覧では、ファイル名とマッチ数の他にファイルサイズやタイムスタンプ、サブディレクトリ名(ワークリストの場合はフルパス)も表示されます。同様にして文字列置換では、置換数一覧に切り替えられます。<br>
+      ・文字列検索の結果リストで、カレントまたは同じサブディレクトリ内では、行番号の表示位置が揃うようにしました。<br>
+      ・非常に長いディレクトリ/ファイル名の省略表示が遅かったのを改善。<br>
+    </dd>
+
     <dt>V16.17 <span class="ver_date">(2024-01-14)</span></dt>
     <dd>
       ・文字列検索(GREP)で利用できるフィルタとして HtmlBody (HTMLの body 要素内の行を検索)、HtmlRem (HTMLのコメント部分を検索)、DfmObj (.dfm ファイルで指定オブジェクトのプロパティ値を検索)を追加。<br>
