--- a/help/src/hid00051.htm
+++ b/help/src/hid00051.htm
@@ -6,24 +6,24 @@
   <title>名前の変更ダイアログ</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="CompressDir">
-	<param name="Keyword" value="Exif情報">
-	<param name="Keyword" value="FLAC">
-	<param name="Keyword" value="ID3タグ">
-	<param name="Keyword" value="MP3">
-	<param name="Keyword" value="NTFS圧縮">
-	<param name="Keyword" value="RenameDlg">
-	<param name="Keyword" value="UndoRename">
-	<param name="Keyword" value="アンドゥ">
-	<param name="Keyword" value="コマンドファイル">
-	<param name="Keyword" value="ファイル名主部の文字置換">
-	<param name="Keyword" value="リストファイル">
-	<param name="Keyword" value="関連ファイルの同時改名">
-	<param name="Keyword" value="正規表現">
-	<param name="Keyword" value="正規表現チェッカー">
-	<param name="Keyword" value="置換">
-	<param name="Keyword" value="名前の変更ダイアログ">
-	<param name="Keyword" value="連番">
+    <param name="Keyword" value="CompressDir">
+    <param name="Keyword" value="Exif情報">
+    <param name="Keyword" value="FLAC">
+    <param name="Keyword" value="ID3タグ">
+    <param name="Keyword" value="MP3">
+    <param name="Keyword" value="NTFS圧縮">
+    <param name="Keyword" value="RenameDlg">
+    <param name="Keyword" value="UndoRename">
+    <param name="Keyword" value="アンドゥ">
+    <param name="Keyword" value="コマンドファイル">
+    <param name="Keyword" value="ファイル名主部の文字置換">
+    <param name="Keyword" value="リストファイル">
+    <param name="Keyword" value="関連ファイルの同時改名">
+    <param name="Keyword" value="正規表現">
+    <param name="Keyword" value="正規表現チェッカー">
+    <param name="Keyword" value="置換">
+    <param name="Keyword" value="名前の変更ダイアログ">
+    <param name="Keyword" value="連番">
   </object>
 </head>
 
@@ -38,14 +38,9 @@
 
   <p>
     画面の上側にあるタブページでは、名前の変更を行います。<br>
-    対象が一つの場合は<span class="tab_frame"><a href="#Name">名前</a></span>、<span class="tab_frame"><a
-        href="#Replace">置換</a></span>、<span class="tab_frame"><a href="#RenList">リスト</a></span>タブが、複数選択している場合は<span
-      class="tab_frame"><a href="#Serial">連番</a></span>、<span class="tab_frame"><a href="#Replace">置換</a></span>、<span
-      class="tab_frame"><a href="#RenList">リスト</a></span>タブが表示されます。<br>
-    また、対象がすべてMP3ファイルの場合は<span class="tab_frame"><a href="#MP3">MP3</a></span>タブが、FLACファイルの場合は<span class="tab_frame"><a
-        href="#MP3">FLAC</a></span>タブが表示されます(混在不可)。<br>
-    なお <a href="hid00005.htm#RenameDlg">RenameDlg</a>_ED を実行した場合は、<span class="tab_frame"><a
-        href="#RenList">リスト</a></span>タブだけが利用できます。<br>
+    対象が一つの場合は<span class="tab_frame"><a href="#Name">名前</a></span>、<span class="tab_frame"><a href="#Replace">置換</a></span>、<span class="tab_frame"><a href="#RenList">リスト</a></span>タブが、複数選択している場合は<span class="tab_frame"><a href="#Serial">連番</a></span>、<span class="tab_frame"><a href="#Replace">置換</a></span>、<span class="tab_frame"><a href="#RenList">リスト</a></span>タブが表示されます。<br>
+    また、対象がすべてMP3ファイルの場合は<span class="tab_frame"><a href="#MP3">MP3</a></span>タブが、FLACファイルの場合は<span class="tab_frame"><a href="#MP3">FLAC</a></span>タブが表示されます(混在不可)。<br>
+    なお <a href="hid00005.htm#RenameDlg">RenameDlg</a>_ED を実行した場合は、<span class="tab_frame"><a href="#RenList">リスト</a></span>タブだけが利用できます。<br>
   </p>
 
   <p>
@@ -60,8 +55,7 @@
   </p>
 
   <p>
-    なお、コマンドファイル(<b>.nbt</b>)のファイル名主部を変更すると、オプション設定のキー設定、関連付け、追加メニュー、起動時に実行するコマンドなどで <a
-      href="hid00005.htm#ExeCommands">ExeCommands</a> のパラメータとなっている箇所に反映されます。<br>
+    なお、コマンドファイル(<b>.nbt</b>)のファイル名主部を変更すると、オプション設定のキー設定、関連付け、追加メニュー、起動時に実行するコマンドなどで <a href="hid00005.htm#ExeCommands">ExeCommands</a> のパラメータとなっている箇所に反映されます。<br>
   </p>
 
   <p class="note_text">
@@ -154,13 +148,10 @@
     なお、<b>増分</b>と<b>後部分</b>との境界線をドラッグすると左右のサイズを変更できます。
   </p>
   <p>
-    <img src="chkbox.png" alt=""> <b>自動プレビュー</b> がチェックされていて、プレビュー表示にフォーカスがある場合、 <span
-      class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span
-      class="btn_frame">↓</span>キーで項目を上下に移動できます。
+    <img src="chkbox.png" alt=""> <b>自動プレビュー</b> がチェックされていて、プレビュー表示にフォーカスがある場合、 <span class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span class="btn_frame">↓</span>キーで項目を上下に移動できます。
   </p>
   <p>
-    <span
-      class="btn_frame">保存</span>の右にあるコンボボックスに名前を入力してボタンを押すと、現在の書式設定内容が保存されます(拡張子のみの変更は除く)。そしてコンボボックスで名前を選択すると、その設定が呼び出されます。<br>
+    <span class="btn_frame">保存</span>の右にあるコンボボックスに名前を入力してボタンを押すと、現在の書式設定内容が保存されます(拡張子のみの変更は除く)。そしてコンボボックスで名前を選択すると、その設定が呼び出されます。<br>
     不要な設定項目の削除は、コンボボックスの右クリックメニュー「<b>この項目を削除</b>」で行ってください。
   </p>
   <br>
@@ -183,8 +174,7 @@
     という書式で記述したリストファイルにしたがって一括置換を行います。<br>
     検索文字列を / で囲むと正規表現とみなされます。また置換文字列には、書式文字列の <b>\C</b> (ファイルのパス無しディレクトリ名)を使用できます。<br>
     なお途中に空行があると、それ以降は無視されます。<br>
-    リストファイルは<span
-      class="btn_frame">...</span>ボタンで参照してください。以前に利用したことのあるファイルは、コンボボックスで選択できます。デフォルトでは、前回利用したファイルが選択されます。<br>
+    リストファイルは<span class="btn_frame">...</span>ボタンで参照してください。以前に利用したことのあるファイルは、コンボボックスで選択できます。デフォルトでは、前回利用したファイルが選択されます。<br>
     リストファイルの内容を変更したい場合は、<span class="btn_frame">編集</span>ボタンを押してください。<br>
     <img src="chkbox.png" alt=""> <b>拡張子は置換しない</b> をチェックしていると、ドットを含む拡張子部分は置換の対象になりません。<br>
   </div>
@@ -200,8 +190,7 @@
 
   <h4>リスト編集による改名</h4>
   <div class="spc_box_p">
-    <a href="hid00005.htm#RenameDlg">RenameDlg</a>_ED コマンドを実行すると、改名対象に対して <span class="format_text">項目番号 <span
-        class="ctrl_text">[TAB]</span> ファイル名</span> という書式でリストファイルが作られ、テキストエディタで自動的に開かれます。<br>
+    <a href="hid00005.htm#RenameDlg">RenameDlg</a>_ED コマンドを実行すると、改名対象に対して <span class="format_text">項目番号 <span class="ctrl_text">[TAB]</span> ファイル名</span> という書式でリストファイルが作られ、テキストエディタで自動的に開かれます。<br>
     ファイル名部分を自由に変更し保存してください。不要な項目は削除してもかまいませんが、順番は入れ替えないでください。<br>
     保存後に <b>NyanFi</b> の確認メッセージで「はい」を選ぶとリストが読み込まれ、ダイアログで改名を行えます。<br>
     リストファイルを編集し直したい場合は、<span class="btn_frame">編集</span>ボタンを押してください。<br>
@@ -278,8 +267,7 @@
   </p>
   <p class="spc_box_p">
     <img src="chkbox.png" alt=""> <b>主部の禁止文字／ユーザ定義文字を置換</b>
-    をチェックしていると、改名・文字種変更後のファイル名に、禁止文字やユーザ定義文字が含まれていた場合、自動的に置換されます。文字置換の設定は<span class="tab_frame"><a
-        href="#Option">設定</a></span>タブで行えます。
+    をチェックしていると、改名・文字種変更後のファイル名に、禁止文字やユーザ定義文字が含まれていた場合、自動的に置換されます。文字置換の設定は<span class="tab_frame"><a href="#Option">設定</a></span>タブで行えます。
   </p>
   <br>
 
@@ -291,8 +279,7 @@
 
   <p>
     複数改名時に <img src="chkbox.png" alt=""> <b>自動プレビュー</b> がチェックされている状態で改名設定を変更すると、リストに「現在のファイル名 →
-    新しいファイル名」という形のプレビューが自動的に表示されます。チェックを外すと設定を変更してもプレビューは更新されません。改名対象が多い場合に設定がしやすくなります。必要に応じて<span
-      class="btn_frame">プレビュー</span>ボタンで更新してください。なお、単独改名時には、このチェック状態にかかわらず常にプレビューが行われます。<br>
+    新しいファイル名」という形のプレビューが自動的に表示されます。チェックを外すと設定を変更してもプレビューは更新されません。改名対象が多い場合に設定がしやすくなります。必要に応じて<span class="btn_frame">プレビュー</span>ボタンで更新してください。なお、単独改名時には、このチェック状態にかかわらず常にプレビューが行われます。<br>
     未更新の状態で<span class="btn_frame">OK</span>ボタンを押すと、プレビューを更新してエラーがなければ改名が行われます。
   </p>
   <p>
@@ -339,17 +326,12 @@
     改名対象と名前の主部が同じ関連ファイルがあった場合、それらを同時に改名できます。<br>
     関連ファイルは、複数の拡張子の組み合わせで指定します。関連するファイルのいずれかを改名すると、他のすべてのファイルの主部が改名されます。なお、関連ファイル同士をともに選択して改名する場合、同時改名は行われません。<br>
     <br>
-    <b>拡張子</b> <img src="edit.png" alt=""> 欄に、複数の拡張子を <b>.</b> (ピリオド)で区切って入力し(例: .mp3.lrc)、 <span
-      class="btn_frame">登録</span>ボタンで登録してください。<br>
+    <b>拡張子</b> <img src="edit.png" alt=""> 欄に、複数の拡張子を <b>.</b> (ピリオド)で区切って入力し(例: .mp3.lrc)、 <span class="btn_frame">登録</span>ボタンで登録してください。<br>
     <img src="chkbox.png" alt=""> <b>部分一致ファイルも改名</b>
     をチェックすると、改名対象の主部全体を部分として含むファイル(*主部*.*)があった場合、それらの一致部分も改名します。例えば、hoge.mp3、hoge.lrc、hoge_memo.txt
     があって、hoge.mp3→HOGEHOGE.mp3 とすると、HOGEHOGE.lrc、HOGEHOGE_memo.txt と改名されます。同じ拡張子同士でも機能しますので、場合によっては注意が必要です。<br>
     一覧のチェックボックスで、登録項目の有効/無効を切り替えられます。<br>
-    登録内容を変更したい場合は<span class="btn_frame">変更</span>ボタンを、削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。また<span
-      class="btn_frame">↑</span><span class="btn_frame">↓</span>ボタンで、項目を上下に移動できます。一覧にフォーカスがある場合は、 <span
-      class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span
-      class="btn_frame">↓</span>キーで項目の上下移動、<span
-      class="btn_frame">DEL</span>キーで削除が可能です。なお、項目の移動はドラッグ＆ドロップでもできます(上下端で自動スクロール)。
+    登録内容を変更したい場合は<span class="btn_frame">変更</span>ボタンを、削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。また<span class="btn_frame">↑</span><span class="btn_frame">↓</span>ボタンで、項目を上下に移動できます。一覧にフォーカスがある場合は、 <span class="btn_frame">Shift</span>+<span class="btn_frame">Ctrl</span>+<span class="btn_frame">↑</span>/<span class="btn_frame">↓</span>キーで項目の上下移動、<span class="btn_frame">DEL</span>キーで削除が可能です。なお、項目の移動はドラッグ＆ドロップでもできます(上下端で自動スクロール)。
   </p>
   <br>
 
@@ -359,9 +341,7 @@
     <dd>
       <img src="chkbox.png" alt=""> <b>主部の禁止文字／ユーザ定義文字を置換</b> をチェックしている場合の文字置換の設定を行います。<br>
       最初の9項目(ファイル名に使えない文字)は、デフォルトとして全角文字への置換に設定されています。これらの置換文字は変更できますが、項目そのものは削除できません。<br>
-      これら以外に追加したい変換文字がある場合は、元文字と置換文字を指定して<span
-        class="btn_frame">追加</span>ボタンを押してください。<br>また一覧で選択されている項目の内容を変更したい場合は<span
-        class="btn_frame">変更</span>ボタンを、項目を削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。<br>
+      これら以外に追加したい変換文字がある場合は、元文字と置換文字を指定して<span class="btn_frame">追加</span>ボタンを押してください。<br>また一覧で選択されている項目の内容を変更したい場合は<span class="btn_frame">変更</span>ボタンを、項目を削除したい場合は<span class="btn_frame">削除</span>ボタンを押してください。<br>
       <div class="spc_box">
         元文字を <b>\x{</b>16進数<b>}</b> という形式で入力すると、Unicode文字コードによる指定が可能です。<br>
         <b>例</b>: Unicode制御文字のLRO(U+202E)を削除<br>
@@ -373,8 +353,7 @@
         をチェックしていると、入力したディレクトリ名に対しても、この設定が適用されます。<br>
       </div>
       <div class="note_text">
-        本来この機能は、禁止文字などの混入を防ぐことを意図したものです。一般的な一括置換を行いたい場合は<span class="tab_frame"><a
-            href="#RenList">リスト</a></span>タブを利用してください。
+        本来この機能は、禁止文字などの混入を防ぐことを意図したものです。一般的な一括置換を行いたい場合は<span class="tab_frame"><a href="#RenList">リスト</a></span>タブを利用してください。
       </div>
     </dd>
 
