--- a/help/src/hid00063.htm
+++ b/help/src/hid00063.htm
@@ -57,8 +57,7 @@
   <p>
     <b>ExeCommands</b> コマンドの実行を中断したい場合は、<span class="btn_frame">ESC</span>キーを押してください。中断の確認メッセージが出ます。
   </p>
-  <p class="link_box"><a href="#Syntax">構文</a> ／ <a href="#UserVar">ユーザ定義変数</a> ／ <a href="#PreDefVar">定義済み変数</a> ／ <a
-      href="#AuxCommand">補助コマンド</a> ／ <a href="#CtrlStatement">制御文</a> ／　<a href="#Example">例</a>
+  <p class="link_box"><a href="#Syntax">構文</a> ／ <a href="#UserVar">ユーザ定義変数</a> ／ <a href="#PreDefVar">定義済み変数</a> ／ <a href="#AuxCommand">補助コマンド</a> ／ <a href="#CtrlStatement">制御文</a> ／　<a href="#Example">例</a>
   </p>
   <br>
 
@@ -67,8 +66,7 @@
     <dt class="no_bg"><b>ExeCommands</b><span class="pram_text">_[:説明:]コマンド[:コマンド...]</span></dt>
     <dd>
       パラメータで指定したコマンドを実行します。コマンドは <b>:</b> (コロン)で区切って複数指定できます。<br>
-      コマンドが <b>$</b> で始まる場合、<a href="hid00014.htm">追加メニュー</a>または<a
-        href="hid00015.htm">外部ツール</a>で設定されている<b>エイリアス</b>とみなし、その項目を実行します(サブメニューの親項目の場合は、そのサブメニューをポップアップ表示)。<br>
+      コマンドが <b>$</b> で始まる場合、<a href="hid00014.htm">追加メニュー</a>または<a href="hid00015.htm">外部ツール</a>で設定されている<b>エイリアス</b>とみなし、その項目を実行します(サブメニューの親項目の場合は、そのサブメニューをポップアップ表示)。<br>
       <br>
       パラメータの先頭に :文字列: という形で説明を付けると、キー割り当て一覧や2ストローク・ヒントの説明部分に表示されます。
       <pre class="example_box">
@@ -318,8 +316,7 @@ MsgBox_%..N%回目です
         </tr>
         <tr>
           <th>MatchedStr</th>
-          <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a
-              href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a> でマッチした部分の文字列</td>
+          <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a> でマッチした部分の文字列</td>
         </tr>
         <tr>
           <th>CodePage</th>
@@ -431,10 +428,7 @@ MsgBox_%..N%回目です
   <h3 id="AuxCommand">補助コマンド</h3>
   <b>ExeCommands</b> コマンドのパラメータまたはコマンドファイル内でのみ使える補助コマンドとして、以下のものがあります。<br>
   <p class="link_box">
-    <a href="#ActivateWnd">A</a> <a href="#CallCommands">C</a> <a href="#Debug">D</a> <a href="#Echo">E</a> <a
-      href="#FileExists">F</a> <a href="#Git">G</a> <a href="#Hint">H</a> <a href="#Ins">I</a> <a
-      href="#JumpCommands">J</a> <a href="#ListBuffer">L</a> <a href="#MatchBuffer">M</a> <a href="#PlaySound">P</a> <a
-      href="#Random">R</a> <a href="#SaveBuffer">S</a> <a href="#Test">T</a> <a href="#WaitForKey">W</a>
+    <a href="#ActivateWnd">A</a> <a href="#CallCommands">C</a> <a href="#Debug">D</a> <a href="#Echo">E</a> <a href="#FileExists">F</a> <a href="#Git">G</a> <a href="#Hint">H</a> <a href="#Ins">I</a> <a href="#JumpCommands">J</a> <a href="#ListBuffer">L</a> <a href="#MatchBuffer">M</a> <a href="#PlaySound">P</a> <a href="#Random">R</a> <a href="#SaveBuffer">S</a> <a href="#Test">T</a> <a href="#WaitForKey">W</a>
   </p>
 
   <div class="indent1">
@@ -501,9 +495,7 @@ AppendBuffer_"nyan.log"
 
         <div class="spc_box">
           デバッグウィンドウでは、以下のボタンまたはキーで操作を行えます。<br>
-          <span class="btn_frame">S</span>: ステップ実行/　<span class="btn_frame">G</span>: 実行/　<span
-            class="btn_frame">B</span>: 停止/　　<span class="btn_frame">Q</span>: デバッグモード終了(Debug_OFF)/　<span
-            class="btn_frame">X</span>: コマンドの実行を終了(<a href="#Exit">Exit</a>)<br>
+          <span class="btn_frame">S</span>: ステップ実行/　<span class="btn_frame">G</span>: 実行/　<span class="btn_frame">B</span>: 停止/　　<span class="btn_frame">Q</span>: デバッグモード終了(Debug_OFF)/　<span class="btn_frame">X</span>: コマンドの実行を終了(<a href="#Exit">Exit</a>)<br>
           <span class="btn_frame">V</span>: 変数一覧を表示(<a href="#ListVar">ListVar</a>)/　<span class="btn_frame">E</span>:
           エディタで開く/　　<span class="btn_frame">H</span>: ヘルプを表示<br>
           上側のリストには、コマンドファイルの内容が表示され、実行位置にカーソルが表示されます。<br>
@@ -570,8 +562,7 @@ ListText_%DownloadName%
         バラメータでタイトルを指定できます。その場合、パラメータ全体をダブルクォーテーションで囲んでください。タイトル内では <b>:\</b> を表示文字として使えます。<br>
         フォントや文字色/背景色はテキストビューアのものが用いられますが、文字色/背景色については右クリックメニューで変更可能です。<br>
         <div class="spc_box">
-          ボックスにフォーカスがある場合、<span class="btn_frame">ENTER</span>キーは改行になります。<span class="btn_frame">OK</span>は、<span
-            class="btn_frame">Ctrl</span>+<span class="btn_frame">ENTER</span>で行ってください。<br>
+          ボックスにフォーカスがある場合、<span class="btn_frame">ENTER</span>キーは改行になります。<span class="btn_frame">OK</span>は、<span class="btn_frame">Ctrl</span>+<span class="btn_frame">ENTER</span>で行ってください。<br>
           キャンセルすると後続 <a href="#IfStatement">If 文</a>の <b>Cancel</b> が真になります(OK なら <b>Yes</b> が真)。<br>
         </div>
         <div class="spc_box">
@@ -758,8 +749,7 @@ Hint
 
       <dt id="ListVar" class="no_bg">ListVar</dt>
       <dd>
-        <a href="#PreDefVar">定義済み変数</a>および<a href="#UserVar">ユーザ定義変数</a>の内容を<a
-          href="hid00073.htm">一覧ダイアログ</a>で表示します。<br>
+        <a href="#PreDefVar">定義済み変数</a>および<a href="#UserVar">ユーザ定義変数</a>の内容を<a href="hid00073.htm">一覧ダイアログ</a>で表示します。<br>
         コマンドファイルのデバッグなどで役立つかもしれません。<br>
       </dd>
 
@@ -870,14 +860,7 @@ IfTrue_Exit
       </dd>
 
       <dt id="MsgOff" class="no_bg">MsgOff</dt>
-      <dd>コピー、移動、削除、解凍や、<a href="hid00005.htm#Backup">Backup</a>_設定名、<a
-          href="hid00005.htm#ConvertHtm2Txt">ConvertHtm2Txt</a>、<a href="hid00005.htm#DeleteADS">DeleteADS</a>、<a
-          href="hid00005.htm#DelJpgExif">DelJpgExif</a>、<a href="hid00005.htm#ExtractChmSrc">ExtractChmSrc</a>、<a
-          href="hid00005.htm#ExtractGifBmp">ExtractGifBmp</a>、<a href="hid00005.htm#ExtractIcon">ExtractIcon</a>、<a
-          href="hid00005.htm#ExtractImage">ExtractImage</a>(<a href="hid00005.htm#ExtractMp3Img">ExtractMp3Img</a>)、<a
-          href="hid00005.htm#ClearMark">ClearMark_AC</a>_AC、<a href="hid00005.htm#DirHistory">DirHistory</a>_AC、<a
-          href="hid00005.htm#EditHistory">EditHistory</a>_AC、<a href="hid00005.htm#ViewHistory">ViewHistory</a>_AC、<a
-          href="hid00005.htm#RecentList">RecentList</a>_AC|BC コマンドで確認メッセージを出さないようにします。<br>
+      <dd>コピー、移動、削除、解凍や、<a href="hid00005.htm#Backup">Backup</a>_設定名、<a href="hid00005.htm#ConvertHtm2Txt">ConvertHtm2Txt</a>、<a href="hid00005.htm#DeleteADS">DeleteADS</a>、<a href="hid00005.htm#DelJpgExif">DelJpgExif</a>、<a href="hid00005.htm#ExtractChmSrc">ExtractChmSrc</a>、<a href="hid00005.htm#ExtractGifBmp">ExtractGifBmp</a>、<a href="hid00005.htm#ExtractIcon">ExtractIcon</a>、<a href="hid00005.htm#ExtractImage">ExtractImage</a>(<a href="hid00005.htm#ExtractMp3Img">ExtractMp3Img</a>)、<a href="hid00005.htm#ClearMark">ClearMark_AC</a>_AC、<a href="hid00005.htm#DirHistory">DirHistory</a>_AC、<a href="hid00005.htm#EditHistory">EditHistory</a>_AC、<a href="hid00005.htm#ViewHistory">ViewHistory</a>_AC、<a href="hid00005.htm#RecentList">RecentList</a>_AC|BC コマンドで確認メッセージを出さないようにします。<br>
       </dd>
 
       <dt id="Nop" class="no_bg">Nop</dt>
@@ -1123,8 +1106,7 @@ SendCommands_"ChangeOppDir_%OppPath%"
 
       <dt id="SetCopyMode" class="no_bg">SetCopyMode<span class="pram_text">_{O|N|S|R}</span></dt>
       <dd>
-        後続の <a href="hid00005.htm#Copy">Copy</a>、<a href="hid00005.htm#CopyTo">CopyTo</a>、<a
-          href="hid00005.htm#Move">Move</a>、<a href="hid00005.htm#MoveTo">MoveTo</a>
+        後続の <a href="hid00005.htm#Copy">Copy</a>、<a href="hid00005.htm#CopyTo">CopyTo</a>、<a href="hid00005.htm#Move">Move</a>、<a href="hid00005.htm#MoveTo">MoveTo</a>
         コマンドで同名ファイルがあった場合、「<b>同名ファイルの処理</b>」ダイアログを出さずに、指定したモードをすべてに強制適用します。ただし、アーカイブ内へのコピーやFTP接続時には適用されません。<br>
         また後続の <a href="hid00005.htm#CreateHardLink">CreateHardLink</a> コマンドで同名ファイルがあった場合も、削除して置き換えの確認を出さずに強制適用できます。<br>
         パラメータは、<b>O</b>「強制上書き」、<b>N</b>「最新なら上書き」、<b>S</b>「スキップ」、<b>R</b>「自動的に名前を変更」のいずれかを指定してください(<b>CreateHardLink</b>
@@ -1431,8 +1413,7 @@ IfFalse_Exit
             </tr>
             <tr>
               <th>Yes</th>
-              <td>直前の <a href="#MsgBoxYN">MsgBoxYN</a>、<a href="#MsgBoxYNC">MsgBoxYNC</a> で「はい」、<a
-                  href="#Input">Input</a> で「OK」が押された</td>
+              <td>直前の <a href="#MsgBoxYN">MsgBoxYN</a>、<a href="#MsgBoxYNC">MsgBoxYNC</a> で「はい」、<a href="#Input">Input</a> で「OK」が押された</td>
             </tr>
             <tr>
               <th>No</th>
@@ -1444,17 +1425,12 @@ IfFalse_Exit
             </tr>
             <tr>
               <th>True</th>
-              <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a
-                  href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a>、<a
-                  href="#ActivateWnd">ActivateWnd</a> でマッチ、<a href="#Test">Test</a>、<a href="#FileExists">FileExists</a>
+              <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a>、<a href="#ActivateWnd">ActivateWnd</a> でマッチ、<a href="#Test">Test</a>、<a href="#FileExists">FileExists</a>
                 の結果が真</td>
             </tr>
             <tr>
               <th>False</th>
-              <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a
-                  href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a>、<a
-                  href="#ActivateWnd">ActivateWnd</a> でマッチしなかった、または <a href="#Test">Test</a>、<a
-                  href="#FileExists">FileExists</a> の結果が偽</td>
+              <td>直前の <a href="#MatchBuffer">MatchBuffer</a>、<a href="#MatchDir">MatchDir</a>、<a href="#MatchExt">MatchExt</a>、<a href="#MatchName">MatchName</a>、<a href="#ActivateWnd">ActivateWnd</a> でマッチしなかった、または <a href="#Test">Test</a>、<a href="#FileExists">FileExists</a> の結果が偽</td>
             </tr>
             <tr>
               <th>TimeOut</th>
@@ -1646,8 +1622,8 @@ Set_Buffer=%SelFiles%: SaveBuffer_D:\filelist.txt
 CompareHash_MD5: Test_LogNgCount&gt;0: IfTrue: MsgBox_一致しません: EndIf
 </pre>
 
-  今日付の画像をイメージビューアで閲覧<br>
-<pre class="example_box">
+    今日付の画像をイメージビューアで閲覧<br>
+    <pre class="example_box">
   DateSelect_TD: SelMask: ImageViewer
 </pre>
 
