--- a/help/src/hid00073.htm
+++ b/help/src/hid00073.htm
@@ -36,17 +36,11 @@
   <div class="spc_box_p">
     一覧ダイアログは、以下の場合に用いられる汎用のダイアログです。<br>
     <ul>
-      <li>ファイラーで <a href="hid00005.htm#CalcDirSize">CalcDirSize</a>_LS、<a
-          href="hid00005.htm#ListArchive">ListArchive</a>_LS、<a href="hid00005.htm#ListClipboard">ListClipboard</a>、<a
-          href="hid00005.htm#ListDuration">ListDuration</a>_LS、<a href="hid00005.htm#ListExpFunc">ListExpFunc</a>_LS、<a
-          href="hid00005.htm#ListFileName">ListFileName</a>、<a href="hid00005.htm#ListLog">ListLog</a>、<a
-          href="hid00005.htm#ListTail">ListTail</a>、<a href="hid00005.htm#ListText">ListText</a>、<a
-          href="hid00005.htm#PlayList">PlayList</a>_LS コマンドを実行。</li>
+      <li>ファイラーで <a href="hid00005.htm#CalcDirSize">CalcDirSize</a>_LS、<a href="hid00005.htm#ListArchive">ListArchive</a>_LS、<a href="hid00005.htm#ListClipboard">ListClipboard</a>、<a href="hid00005.htm#ListDuration">ListDuration</a>_LS、<a href="hid00005.htm#ListExpFunc">ListExpFunc</a>_LS、<a href="hid00005.htm#ListFileName">ListFileName</a>、<a href="hid00005.htm#ListLog">ListLog</a>、<a href="hid00005.htm#ListTail">ListTail</a>、<a href="hid00005.htm#ListText">ListText</a>、<a href="hid00005.htm#PlayList">PlayList</a>_LS コマンドを実行。</li>
       <li>ファイラー、テキストビューア、イメージビューアで <a href="hid00005.htm#CmdHistory">CmdHistory</a> コマンドを実行。</li>
       <li>「<a href="hid00062.htm">コマンドラインの実行</a>」ダイアログ(<a href="hid00005.htm#ExeCommandLine">ExeCommandLine</a>)
         でコンソールアプリの出力を「<b>一覧で表示</b>」にした場合。</li>
-      <li><a href="hid00005.htm#ExeCommands">ExeCommands</a> の補助コマンド <a href="hid00063.htm#ListBuffer">ListBuffer</a>、<a
-          href="hid00063.htm#ListVar">ListVar</a> を実行。</li>
+      <li><a href="hid00005.htm#ExeCommands">ExeCommands</a> の補助コマンド <a href="hid00063.htm#ListBuffer">ListBuffer</a>、<a href="hid00063.htm#ListVar">ListVar</a> を実行。</li>
     </ul>
   </div>
 
@@ -57,49 +51,38 @@
       対応しているコマンドは、CursorDown/Up/Top/End、TextTop/End(TV)、PageDown/Up、ScrollDown/Up、ScrollCursorDown/Up(TV)、Select、SelAll～、SelectAll(TV)、ClipCopy(TV)、FindText、FindDown/Up(TV:
       行検索)、Sort(TV)、ZoomIn/Out/Reset、SetFontSize、OpenURL(TV)、Close(TV) です。<br>
       なお、テキストビューアの対応コマンドについては、2ストロークキー操作が可能です。<br>
-      また <a href="hid00005.htm#TextViewer">TextViewer</a> コマンドが割り当てられているキーを押すと、表示されている一覧内容がクリップボードを経由して<a
-        href="hid00006.htm">テキストビューア</a>で開かれます。<br>
+      また <a href="hid00005.htm#TextViewer">TextViewer</a> コマンドが割り当てられているキーを押すと、表示されている一覧内容がクリップボードを経由して<a href="hid00006.htm">テキストビューア</a>で開かれます。<br>
 
       <div class="spc_box">
-        <a href="hid00005.htm#ListText">ListText</a> コマンドでテキストファイルを表示している場合は、<a
-          href="hid00005.htm#TextViewer">TextViewer</a>、<a href="hid00005.htm#FileEdit">FileEdit</a>
-        コマンドが割り当てられているキーで、表示中のファイルをカーソル位置の行番号を参照して開けます(<b>FileEdit</b> についてはフォーカスにかかわらず<span
-          class="btn_frame">Alt</span>+<span class="btn_frame">E</span>キーでも可能)。<br>
+        <a href="hid00005.htm#ListText">ListText</a> コマンドでテキストファイルを表示している場合は、<a href="hid00005.htm#TextViewer">TextViewer</a>、<a href="hid00005.htm#FileEdit">FileEdit</a>
+        コマンドが割り当てられているキーで、表示中のファイルをカーソル位置の行番号を参照して開けます(<b>FileEdit</b> についてはフォーカスにかかわらず<span class="btn_frame">Alt</span>+<span class="btn_frame">E</span>キーでも可能)。<br>
         また <a href="hid00005.htm#ListText">ListText</a>、<a href="hid00005.htm#ListTail">ListTail</a>
-        コマンドでテキストファイルを表示している場合は、<a href="hid00006.htm#NextFile">NextFile</a>、<a
-          href="hid00006.htm#PrevFile">PrevFile</a> コマンドも利用できます。<br>
+        コマンドでテキストファイルを表示している場合は、<a href="hid00006.htm#NextFile">NextFile</a>、<a href="hid00006.htm#PrevFile">PrevFile</a> コマンドも利用できます。<br>
       </div>
 
       <div class="spc_box">
         <a href="hid00005.htm#ListLog">ListLog</a>
-        コマンドでログ内容を表示している場合、あるいはログファイル(<b>tasklog(~n).txt</b>)を表示している場合、テキストビューアで <a
-          href="hid00006.htm#PrevErr">PrevErr</a>/<a href="hid00006.htm#NextErr">NextErr</a>
+        コマンドでログ内容を表示している場合、あるいはログファイル(<b>tasklog(~n).txt</b>)を表示している場合、テキストビューアで <a href="hid00006.htm#PrevErr">PrevErr</a>/<a href="hid00006.htm#NextErr">NextErr</a>
         コマンドが割り当てられているキーで、前後のエラー位置(W:警告、C:中断を含む)に移動できます。<br>
       </div>
 
       <div class="spc_box">
-        <a href="hid00005.htm#ListFileName">ListFileName</a> コマンドでファイル名一覧を表示している場合、<span
-          class="btn_frame">Enter</span>キーを押すと、ダイアログを閉じてそのファイル位置に移動します(選択項目があればファイルリストに反映)。<br>
+        <a href="hid00005.htm#ListFileName">ListFileName</a> コマンドでファイル名一覧を表示している場合、<span class="btn_frame">Enter</span>キーを押すと、ダイアログを閉じてそのファイル位置に移動します(選択項目があればファイルリストに反映)。<br>
         <a href="hid00005.htm#ListTree">ListTree</a> コマンドによるディレクトリのツリー表示や、<a href="hid00005.htm#CopyDir">CopyDir</a>_LS
         コマンドによるディレクトリ名一覧表示の場合、<span class="btn_frame">Enter</span>キーを押すとカーソル位置のディレクトリに移動します。<br>
       </div>
       <div class="spc_box">
-        <a href="hid00005.htm#PlayList">PlayList</a>_LS コマンドでプレイリストを表示している場合、<span
-          class="btn_frame">Enter</span>キーを押すと、カーソル位置の曲を再生できます(再生中なら一時停止)。項目の先頭には&#x25b6;マークが表示されます(一時停止中なら「<b>無効な項目の文字色</b>」で表示)。<br>
+        <a href="hid00005.htm#PlayList">PlayList</a>_LS コマンドでプレイリストを表示している場合、<span class="btn_frame">Enter</span>キーを押すと、カーソル位置の曲を再生できます(再生中なら一時停止)。項目の先頭には&#x25b6;マークが表示されます(一時停止中なら「<b>無効な項目の文字色</b>」で表示)。<br>
         なお再生/一時停止や前/次曲再生は、ツールボタンでも可能です。<br>
       </div>
 
-      <a href="hid00005.htm#ListFileName">ListFileName</a>、<a href="hid00005.htm#ListTree">ListTree</a>、<a
-        href="hid00005.htm#CopyDir">CopyDir</a>_LS、<a href="hid00005.htm#PlayList">PlayList</a>_LS コマンドで一覧を表示している場合、<a
-        href="hid00005.htm#ShowFileInfo">ShowFileInfo</a>、<a href="hid00005.htm#ListFileInfo">ListFileInfo</a>
+      <a href="hid00005.htm#ListFileName">ListFileName</a>、<a href="hid00005.htm#ListTree">ListTree</a>、<a href="hid00005.htm#CopyDir">CopyDir</a>_LS、<a href="hid00005.htm#PlayList">PlayList</a>_LS コマンドで一覧を表示している場合、<a href="hid00005.htm#ShowFileInfo">ShowFileInfo</a>、<a href="hid00005.htm#ListFileInfo">ListFileInfo</a>
       コマンドが割り当てられているキーでファイル情報を、<a href="hid00005.htm#PropertyDlg">PropertyDlg</a> コマンドが割り当てられているキーでプロパティを表示できます。<br>
     </dd>
 
     <dt class="no_bg">ファイル監視</dt>
     <dd>
-      <a href="hid00005.htm#ListTail">ListTail</a> コマンドでテキストファイルを表示している場合、ツールボタンの<span
-        class="btn_frame">監視</span>を有効にしていると、ファイルの変化を監視して表示を自動的に更新します(監視間隔=1秒)。また<span
-        class="btn_frame">通知</span>を有効にしていると、ファイルが変化(フィルタ中なら表示内容が変化)したときに、<a href="hid00018.htm">オプション設定 -
+      <a href="hid00005.htm#ListTail">ListTail</a> コマンドでテキストファイルを表示している場合、ツールボタンの<span class="btn_frame">監視</span>を有効にしていると、ファイルの変化を監視して表示を自動的に更新します(監視間隔=1秒)。また<span class="btn_frame">通知</span>を有効にしていると、ファイルが変化(フィルタ中なら表示内容が変化)したときに、<a href="hid00018.htm">オプション設定 -
         通知・確認</a>で「<b>ファイル監視の通知音</b>」で設定されている通知音が鳴ります。<br>
       <br>
     </dd>
@@ -107,8 +90,7 @@
     <dt class="no_bg">フィルタ</dt>
     <dd>
       <b>フィルタ</b>覧に文字列を入力すると、それが含まれている行だけが絞り込み表示されます。大文字を入力すると、大小文字を区別します。<br>
-      <span class="btn_frame">Migemo</span>ボタンを有効にすると <b>Migemo</b> モードで絞り込みを行えます。モード切り替えは、フィルタ欄で <span
-        class="btn_frame">Ctrl</span>+<span class="btn_frame">M</span>キーでも可能です。<br>
+      <span class="btn_frame">Migemo</span>ボタンを有効にすると <b>Migemo</b> モードで絞り込みを行えます。モード切り替えは、フィルタ欄で <span class="btn_frame">Ctrl</span>+<span class="btn_frame">M</span>キーでも可能です。<br>
       <div class="note_text">
         ※<b>Migemo</b> モードだと処理が重くなります。フィルタ欄には日本語も入力できるので、行数が多い場合は通常モードにした方がよいでしょう。<br>
       </div>
@@ -117,20 +99,12 @@
       <span class="btn_frame">強調</span>が有効だと、フィルタ欄の文字列にマッチした語が強調表示されます。<br>
 
       <div class="spc_box">
-        フィルタ覧にフォーカスがある場合でも、<span class="btn_frame">↑</span>(or <span class="btn_frame">Ctrl</span>+<span
-          class="btn_frame">E</span>) / <span class="btn_frame">↓</span>(選択中でなければ<span
-          class="btn_frame">Ctrl</span>+<span class="btn_frame">X</span>でも可)キーで一覧のカーソル移動が、<span
-          class="btn_frame">PGUP</span>(or <span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>) / <span
-          class="btn_frame">PGDN</span>(選択中でなければ<span class="btn_frame">Ctrl</span>+<span
-          class="btn_frame">C</span>でも可)キーでページ移動が可能です。またマウスホイール操作は一覧に対して働きます。<br>
+        フィルタ覧にフォーカスがある場合でも、<span class="btn_frame">↑</span>(or <span class="btn_frame">Ctrl</span>+<span class="btn_frame">E</span>) / <span class="btn_frame">↓</span>(選択中でなければ<span class="btn_frame">Ctrl</span>+<span class="btn_frame">X</span>でも可)キーで一覧のカーソル移動が、<span class="btn_frame">PGUP</span>(or <span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>) / <span class="btn_frame">PGDN</span>(選択中でなければ<span class="btn_frame">Ctrl</span>+<span class="btn_frame">C</span>でも可)キーでページ移動が可能です。またマウスホイール操作は一覧に対して働きます。<br>
       </div>
 
       <div class="spc_box">
-        一覧とフィルタ欄との間は<span class="btn_frame">TAB</span>キーで行き来できます。また一覧からは、ファイラーで <a
-          href="hid00005.htm#IncSearch">IncSearch</a> コマンドに割り当てられているキーでフィルタ欄に、フィルタ欄からは<span
-          class="btn_frame">Ctrl</span>+<span class="btn_frame">L</span>で一覧に移れます。<br>
-        画面を閉じたい場合は、<span class="btn_frame">ESC</span>(or <span class="btn_frame">Alt</span>+<span
-          class="btn_frame">F4</span>)キーを押すか、<a href="hid00005.htm#ReturnList">ReturnList</a>
+        一覧とフィルタ欄との間は<span class="btn_frame">TAB</span>キーで行き来できます。また一覧からは、ファイラーで <a href="hid00005.htm#IncSearch">IncSearch</a> コマンドに割り当てられているキーでフィルタ欄に、フィルタ欄からは<span class="btn_frame">Ctrl</span>+<span class="btn_frame">L</span>で一覧に移れます。<br>
+        画面を閉じたい場合は、<span class="btn_frame">ESC</span>(or <span class="btn_frame">Alt</span>+<span class="btn_frame">F4</span>)キーを押すか、<a href="hid00005.htm#ReturnList">ReturnList</a>
         コマンドが割り当てられているキーを一覧で押してください。<br>
       </div>
     </dd>
@@ -159,13 +133,11 @@
       </div>
       <div class="spc_box">
         <a href="hid00005.htm#ListText">ListText</a>、<a href="hid00005.htm#ListTail">ListTail</a>
-        コマンドでテキストファイルを表示している場合、「<b>カーソル位置を維持</b>」をチェックしていると、<a href="hid00006.htm#NextFile">NextFile</a>、<a
-          href="hid00006.htm#PrevFile">PrevFile</a> コマンドで前後のファイルに移ったときに、カーソル位置が可能な限り維持されます(ダイアログを閉じるとリセット)。<br>
+        コマンドでテキストファイルを表示している場合、「<b>カーソル位置を維持</b>」をチェックしていると、<a href="hid00006.htm#NextFile">NextFile</a>、<a href="hid00006.htm#PrevFile">PrevFile</a> コマンドで前後のファイルに移ったときに、カーソル位置が可能な限り維持されます(ダイアログを閉じるとリセット)。<br>
       </div>
       <div class="spc_box">
         「<b>サイズと位置をファイルリストに合わせる</b>」では、メイン画面のファイルリスト全体を覆うように、ダイアログの位置とサイズを調整します。<br>
-        なお右クリックメニューは、アプリケーションキーや<span class="btn_frame">Shift</span>+<span class="btn_frame">F10</span>キーの他に、ファイラーで <a
-          href="hid00005.htm#ContextMenu">ContextMenu</a> コマンドが割り当てられているキーでも表示できます。<br>
+        なお右クリックメニューは、アプリケーションキーや<span class="btn_frame">Shift</span>+<span class="btn_frame">F10</span>キーの他に、ファイラーで <a href="hid00005.htm#ContextMenu">ContextMenu</a> コマンドが割り当てられているキーでも表示できます。<br>
       </div>
     </dd>
 
